Verlinkung "betroffene Person"

--- a/artikel/03.tex
+++ b/artikel/03.tex
@@ -12,17 +12,17 @@
   \label{itm:03-1}
 
   \item Diese Verordnung findet Anwendung auf die Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten} von
-   betroffenen Personen, die sich in der Union befinden, durch einen nicht in der Union niedergelassenen
+   \hyperref[itm:04-1]{betroffenen Personen}, die sich in der Union befinden, durch einen nicht in der Union niedergelassenen
    Verantwortlichen oder Auftragsverarbeiter, wenn die Datenverarbeitung im Zusammenhang damit steht
   \label{itm:03-2}
 
   \begin{enumerate}
   
-    \item betroffenen Personen in der Union Waren oder Dienstleistungen anzubieten, unabhängig davon, ob von diesen
-     betroffenen Personen eine Zahlung zu leisten ist;
+    \item \hyperref[itm:04-1]{betroffenen Personen} in der Union Waren oder Dienstleistungen anzubieten, unabhängig davon, ob von diesen
+     \hyperref[itm:04-1]{betroffenen Personen} eine Zahlung zu leisten ist;
     \label{itm:03-2a}
 
-    \item das Verhalten betroffener Personen zu beobachten, soweit ihr Verhalten in der Union erfolgt.
+    \item das Verhalten \hyperref[itm:04-1]{betroffener Personen} zu beobachten, soweit ihr Verhalten in der Union erfolgt.
     \label{itm:03-2b}
 
   \end{enumerate}
