--- a/artikel/04.tex
+++ b/artikel/04.tex
@@ -35,7 +35,7 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
   \label{itm:04-4}
 
   \item „Pseudonymisierung“ die Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten} in einer Weise, dass die \hyperref[itm:04-1]{personenbezogenen Daten}
-   ohne Hinzuziehung zusätzlicher Informationen nicht mehr einer spezifischen betroffenen Person zugeordnet werden
+   ohne Hinzuziehung zusätzlicher Informationen nicht mehr einer spezifischen \hyperref[itm:04-1]{betroffenen Person} zugeordnet werden
    können, sofern diese zusätzlichen Informationen gesondert aufbewahrt werden und technischen und organisatorischen
    Maßnahmen unterliegen, die gewährleisten, dass die \hyperref[itm:04-1]{personenbezogenen Daten} nicht einer identifizierten oder
    identifizierbaren natürlichen Person zugewiesen werden;
@@ -66,14 +66,14 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
   \label{itm:04-9}
 
   \item „Dritter“ eine natürliche oder juristische Person, Behörde, Einrichtung oder andere Stelle, außer der
-   betroffenen Person, dem Verantwortlichen, dem Auftragsverarbeiter und den Personen, die unter der unmittelbaren
+   \hyperref[itm:04-1]{betroffenen Person}, dem Verantwortlichen, dem Auftragsverarbeiter und den Personen, die unter der unmittelbaren
    Verantwortung des Verantwortlichen oder des Auftragsverarbeiters befugt sind, die \hyperref[itm:04-1]{personenbezogenen Daten} zu
    verarbeiten;
   \label{itm:04-10}
 
-  \item „Einwilligung“ der betroffenen Person jede freiwillig für den bestimmten Fall, in informierter Weise und
+  \item „Einwilligung“ der \hyperref[itm:04-1]{betroffenen Person} jede freiwillig für den bestimmten Fall, in informierter Weise und
    unmissverständlich abgegebene Willensbekundung in Form einer Erklärung oder einer sonstigen eindeutigen
-   bestätigenden Handlung, mit der die betroffene Person zu verstehen gibt, dass sie mit der Verarbeitung der sie
+   bestätigenden Handlung, mit der die \hyperref[itm:04-1]{betroffene Person} zu verstehen gibt, dass sie mit der Verarbeitung der sie
    betreffenden \hyperref[itm:04-1]{personenbezogenen Daten} einverstanden ist;
   \label{itm:04-11}
 
@@ -155,7 +155,7 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
      niedergelassen ist,
     \label{itm:04-22a}
 
-    \item diese Verarbeitung erhebliche Auswirkungen auf betroffene Personen mit Wohnsitz im Mitgliedstaat dieser
+    \item diese Verarbeitung erhebliche Auswirkungen auf \hyperref[itm:04-1]{betroffene Personen} mit Wohnsitz im Mitgliedstaat dieser
      Aufsichtsbehörde hat oder haben kann oder
     \label{itm:04-22b}
 
@@ -176,7 +176,7 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
 
     \item eine Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten}, die im Rahmen der Tätigkeiten einer einzelnen Niederlassung eines
      Verantwortlichen oder eines Auftragsverarbeiters in der Union erfolgt, die jedoch erhebliche Auswirkungen auf
-     betroffene Personen in mehr als einem Mitgliedstaat hat oder haben kann;
+     \hyperref[itm:04-1]{betroffene Personen} in mehr als einem Mitgliedstaat hat oder haben kann;
     \label{itm:04-23b}
 
   \end{enumerate}
@@ -184,8 +184,8 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
   \item „maßgeblicher und begründeter Einspruch“ einen Einspruch gegen einen Beschlussentwurf im Hinblick darauf, ob ein
    Verstoß gegen diese Verordnung vorliegt oder ob beabsichtigte Maßnahmen gegen den Verantwortlichen oder den
    Auftragsverarbeiter im Einklang mit dieser Verordnung steht, wobei aus diesem Einspruch die Tragweite der Risiken
-   klar hervorgeht, die von dem Beschlussentwurf in Bezug auf die Grundrechte und Grundfreiheiten der betroffenen
-   Personen und gegebenenfalls den freien Verkehr \hyperref[itm:04-1]{personenbezogener Daten} in der Union ausgehen;
+   klar hervorgeht, die von dem Beschlussentwurf in Bezug auf die Grundrechte und Grundfreiheiten der \hyperref[itm:04-1]{betroffenen
+   Personen} und gegebenenfalls den freien Verkehr \hyperref[itm:04-1]{personenbezogener Daten} in der Union ausgehen;
   \label{itm:04-27}
  
   \item „Dienst der Informationsgesellschaft“ eine Dienstleistung im Sinne des Artikels 1 Nummer 1 Buchstabe b der
