--- a/artikel/05.tex
+++ b/artikel/05.tex
@@ -11,7 +11,7 @@
 
   \begin{enumerate}
   
-    \item auf rechtmäßige Weise, nach Treu und Glauben und in einer für die betroffene Person nachvollziehbaren Weise
+    \item auf rechtmäßige Weise, nach Treu und Glauben und in einer für die \hyperref[itm:04-1]{betroffene Person} nachvollziehbaren Weise
      verarbeitet werden („Rechtmäßigkeit, Verarbeitung nach Treu und Glauben, Transparenz“);
     \label{itm:05-1a}
 
@@ -31,10 +31,10 @@
      unverzüglich gelöscht oder berichtigt werden („Richtigkeit“);
     \label{itm:05-1d}
 
-    \item in einer Form gespeichert werden, die die Identifizierung der betroffenen Personen nur so lange ermöglicht,
+    \item in einer Form gespeichert werden, die die Identifizierung der \hyperref[itm:04-1]{betroffenen Personen} nur so lange ermöglicht,
      wie es für die Zwecke, für die sie verarbeitet werden, erforderlich ist; \hyperref[itm:04-1]{personenbezogene Daten} dürfen länger
      gespeichert werden, soweit die \hyperref[itm:04-1]{personenbezogenen Daten} vorbehaltlich der Durchführung geeigneter technischer und
-     organisatorischer Maßnahmen, die von dieser Verordnung zum Schutz der Rechte und Freiheiten der betroffenen Person
+     organisatorischer Maßnahmen, die von dieser Verordnung zum Schutz der Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Person}
      gefordert werden, ausschließlich für im öffentlichen Interesse liegende Archivzwecke oder für wissenschaftliche
      und historische Forschungszwecke oder für statistische Zwecke gemäß \hyperref[itm:89-1]{Artikel 89 Absatz 1}
      verarbeitet werden(„Speicherbegrenzung“);
