--- a/artikel/06.tex
+++ b/artikel/06.tex
@@ -11,19 +11,19 @@
 
   \begin{enumerate}
   
-    \item Die betroffene Person hat ihre Einwilligung zu der Verarbeitung der sie betreffenden \hyperref[itm:04-1]{personenbezogenen Daten}
+    \item Die \hyperref[itm:04-1]{betroffene Person} hat ihre Einwilligung zu der Verarbeitung der sie betreffenden \hyperref[itm:04-1]{personenbezogenen Daten}
      für einen oder mehrere bestimmte Zwecke gegeben;
     \label{itm:06-1a}
 
-    \item die Verarbeitung ist für die Erfüllung eines Vertrags, dessen Vertragspartei die betroffene Person ist, oder
-     zur Durchführung vorvertraglicher Maßnahmen erforderlich, die auf Anfrage der betroffenen Person erfolgen;
+    \item die Verarbeitung ist für die Erfüllung eines Vertrags, dessen Vertragspartei die \hyperref[itm:04-1]{betroffene Person} ist, oder
+     zur Durchführung vorvertraglicher Maßnahmen erforderlich, die auf Anfrage der \hyperref[itm:04-1]{betroffenen Person} erfolgen;
     \label{itm:06-1b}
 
     \item die Verarbeitung ist zur Erfüllung einer rechtlichen Verpflichtung erforderlich, der der Verantwortliche
      unterliegt;
     \label{itm:06-1c}
 
-    \item die Verarbeitung ist erforderlich, um lebenswichtige Interessen der betroffenen Person oder einer anderen
+    \item die Verarbeitung ist erforderlich, um lebenswichtige Interessen der \hyperref[itm:04-1]{betroffenen Person} oder einer anderen
      natürlichen Person zu schützen;
     \label{itm:06-1d}
 
@@ -32,8 +32,8 @@
     \label{itm:06-1e}
 
     \item die Verarbeitung ist zur Wahrung der berechtigten Interessen des Verantwortlichen oder eines Dritten
-     erforderlich, sofern nicht die Interessen oder Grundrechte und Grundfreiheiten der betroffenen Person, die den
-     Schutz \hyperref[itm:04-1]{personenbezogener Daten} erfordern, überwiegen, insbesondere dann, wenn es sich bei der betroffenen Person
+     erforderlich, sofern nicht die Interessen oder Grundrechte und Grundfreiheiten der \hyperref[itm:04-1]{betroffenen Person}, die den
+     Schutz \hyperref[itm:04-1]{personenbezogener Daten} erfordern, überwiegen, insbesondere dann, wenn es sich bei der \hyperref[itm:04-1]{betroffenen Person}
      um ein Kind handelt.
     \label{itm:06-1f}
 
@@ -76,7 +76,7 @@
    liegendes Ziel verfolgen und in einem angemessenen Verhältnis zu dem verfolgten legitimen Zweck stehen.
 
   \item Beruht die Verarbeitung zu einem anderen Zweck als zu demjenigen, zu dem die \hyperref[itm:04-1]{personenbezogenen Daten} erhoben
-   wurden, nicht auf der Einwilligung der betroffenen Person oder auf einer Rechtsvorschrift der Union oder der
+   wurden, nicht auf der Einwilligung der \hyperref[itm:04-1]{betroffenen Person} oder auf einer Rechtsvorschrift der Union oder der
    Mitgliedstaaten, die in einer demokratischen Gesellschaft eine notwendige und verhältnismäßige Maßnahme zum Schutz
    der in \hyperref[itm:23-1]{Artikel 23 Absatz 1} genannten Ziele darstellt, so berücksichtigt der Verantwortliche --
    um festzustellen, ob die Verarbeitung zu einem anderen Zweck mit demjenigen, zu dem die \hyperref[itm:04-1]{personenbezogenen Daten}
@@ -90,7 +90,7 @@
     \label{itm:06-4a}
 
     \item den Zusammenhang, in dem die \hyperref[itm:04-1]{personenbezogenen Daten} erhoben wurden, insbesondere hinsichtlich des
-     Verhältnisses zwischen den betroffenen Personen und dem Verantwortlichen,
+     Verhältnisses zwischen den \hyperref[itm:04-1]{betroffenen Personen} und dem Verantwortlichen,
     \label{itm:06-4b}
 
     \item die Art der \hyperref[itm:04-1]{personenbezogenen Daten}, insbesondere ob besondere Kategorien \hyperref[itm:04-1]{personenbezogener Daten} gemäß
@@ -98,7 +98,7 @@
       und Straftaten gemäß \hyperref[ch:10]{Artikel 10} verarbeitet werden,
     \label{itm:06-4c}
 
-    \item die möglichen Folgen der beabsichtigten Weiterverarbeitung für die betroffenen Personen,
+    \item die möglichen Folgen der beabsichtigten Weiterverarbeitung für die \hyperref[itm:04-1]{betroffenen Personen},
     \label{itm:06-4d}
 
     \item das Vorhandensein geeigneter Garantien, wozu Verschlüsselung oder Pseudonymisierung gehören kann.
