--- a/artikel/07.tex
+++ b/artikel/07.tex
@@ -6,19 +6,19 @@
 
 \begin{enumerate}
 
-  \item Beruht die Verarbeitung auf einer Einwilligung, muss der Verantwortliche nachweisen können, dass die betroffene
-   Person in die Verarbeitung ihrer \hyperref[itm:04-1]{personenbezogenen Daten} eingewilligt hat.
+  \item Beruht die Verarbeitung auf einer Einwilligung, muss der Verantwortliche nachweisen können, dass die \hyperref[itm:04-1]{betroffene
+   Person} in die Verarbeitung ihrer \hyperref[itm:04-1]{personenbezogenen Daten} eingewilligt hat.
   \label{itm:07-1}
 
-  \item Erfolgt die Einwilligung der betroffenen Person durch eine schriftliche Erklärung, die noch andere Sachverhalte
+  \item Erfolgt die Einwilligung der \hyperref[itm:04-1]{betroffenen Person} durch eine schriftliche Erklärung, die noch andere Sachverhalte
    betrifft, so muss das Ersuchen um Einwilligung in verständlicher und leicht zugänglicher Form in einer klaren und
    einfachen Sprache so erfolgen, dass es von den anderen Sachverhalten klar zu unterscheiden ist. Teile der Erklärung
    sind dann nicht verbindlich, wenn sie einen Verstoß gegen diese Verordnung darstellen.
   \label{itm:07-2}
 
-  \item Die betroffene Person hat das Recht, ihre Einwilligung jederzeit zu widerrufen. Durch den Widerruf der
+  \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, ihre Einwilligung jederzeit zu widerrufen. Durch den Widerruf der
    Einwilligung wird die Rechtmäßigkeit der aufgrund der Einwilligung bis zum Widerruf erfolgten Verarbeitung nicht
-   berührt. Die betroffene Person wird vor Abgabe der Einwilligung hiervon in Kenntnis gesetzt. Der Widerruf der
+   berührt. Die \hyperref[itm:04-1]{betroffene Person} wird vor Abgabe der Einwilligung hiervon in Kenntnis gesetzt. Der Widerruf der
    Einwilligung muss so einfach wie die Erteilung der Einwilligung sein.
   \label{itm:07-3}
 
