--- a/artikel/09.tex
+++ b/artikel/09.tex
@@ -17,21 +17,21 @@
 
   \begin{enumerate}
   
-    \item Die betroffene Person hat in die Verarbeitung der genannten \hyperref[itm:04-1]{personenbezogenen Daten} für einen oder mehrere
+    \item Die \hyperref[itm:04-1]{betroffene Person} hat in die Verarbeitung der genannten \hyperref[itm:04-1]{personenbezogenen Daten} für einen oder mehrere
      festgelegte Zwecke ausdrücklich eingewilligt, es sei denn, nach Unionsrecht oder dem Recht der Mitgliedstaaten
-     kann das Verbot nach \hyperref[itm:09-1]{Absatz 1} durch die Einwilligung der betroffenen Person nicht aufgehoben
+     kann das Verbot nach \hyperref[itm:09-1]{Absatz 1} durch die Einwilligung der \hyperref[itm:04-1]{betroffenen Person} nicht aufgehoben
      werden,
     \label{itm:09-2a}
 
-    \item die Verarbeitung ist erforderlich, damit der Verantwortliche oder die betroffene Person die ihm bzw. ihr aus
+    \item die Verarbeitung ist erforderlich, damit der Verantwortliche oder die \hyperref[itm:04-1]{betroffene Person} die ihm bzw. ihr aus
      dem Arbeitsrecht und dem Recht der sozialen Sicherheit und des Sozialschutzes erwachsenden Rechte ausüben und
      seinen bzw. ihren diesbezüglichen Pflichten nachkommen kann, soweit dies nach Unionsrecht oder dem Recht der
      Mitgliedstaaten oder einer Kollektivvereinbarung nach dem Recht der Mitgliedstaaten, das geeignete Garantien für
-     die Grundrechte und die Interessen der betroffenen Person vorsieht, zulässig ist,
+     die Grundrechte und die Interessen der \hyperref[itm:04-1]{betroffenen Person} vorsieht, zulässig ist,
     \label{itm:09-2b}
 
-    \item die Verarbeitung ist zum Schutz lebenswichtiger Interessen der betroffenen Person oder einer anderen
-     natürlichen Person erforderlich und die betroffene Person ist aus körperlichen oder rechtlichen Gründen
+    \item die Verarbeitung ist zum Schutz lebenswichtiger Interessen der \hyperref[itm:04-1]{betroffenen Person} oder einer anderen
+     natürlichen Person erforderlich und die \hyperref[itm:04-1]{betroffene Person} ist aus körperlichen oder rechtlichen Gründen
      außerstande, ihre Einwilligung zu geben,
     \label{itm:09-2c}
 
@@ -40,10 +40,10 @@
      Gewinnerzielungsabsicht im Rahmen ihrer rechtmäßigen Tätigkeiten und unter der Voraussetzung, dass sich die
      Verarbeitung ausschließlich auf die Mitglieder oder ehemalige Mitglieder der Organisation oder auf Personen, die
      im Zusammenhang mit deren Tätigkeitszweck regelmäßige Kontakte mit ihr unterhalten, bezieht und die
-     \hyperref[itm:04-1]{personenbezogenen Daten} nicht ohne Einwilligung der betroffenen Personen nach außen offengelegt werden,
+     \hyperref[itm:04-1]{personenbezogenen Daten} nicht ohne Einwilligung der \hyperref[itm:04-1]{betroffenen Personen} nach außen offengelegt werden,
     \label{itm:09-2d}
 
-    \item die Verarbeitung bezieht sich auf \hyperref[itm:04-1]{personenbezogene Daten}, die die betroffene Person offensichtlich öffentlich
+    \item die Verarbeitung bezieht sich auf \hyperref[itm:04-1]{personenbezogene Daten}, die die \hyperref[itm:04-1]{betroffene Person} offensichtlich öffentlich
      gemacht hat,
     \label{itm:09-2e}
 
@@ -53,7 +53,7 @@
 
     \item die Verarbeitung ist auf der Grundlage des Unionsrechts oder des Rechts eines Mitgliedstaats, das in
      angemessenem Verhältnis zu dem verfolgten Ziel steht, den Wesensgehalt des Rechts auf Datenschutz wahrt und
-     angemessene und spezifische Maßnahmen zur Wahrung der Grundrechte und Interessen der betroffenen Person vorsieht,
+     angemessene und spezifische Maßnahmen zur Wahrung der Grundrechte und Interessen der \hyperref[itm:04-1]{betroffenen Person} vorsieht,
      aus Gründen eines erheblichen öffentlichen Interesses erforderlich,
     \label{itm:09-2g}
 
@@ -69,12 +69,12 @@
      Schutz vor schwerwiegenden grenzüberschreitenden Gesundheitsgefahren oder zur Gewährleistung hoher Qualitäts- und
      Sicherheitsstandards bei der Gesundheitsversorgung und bei Arzneimitteln und Medizinprodukten, auf der Grundlage
      des Unionsrechts oder des Rechts eines Mitgliedstaats, das angemessene und spezifische Maßnahmen zur Wahrung der
-     Rechte und Freiheiten der betroffenen Person, insbesondere des Berufsgeheimnisses, vorsieht, erforderlich, oder
+     Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Person}, insbesondere des Berufsgeheimnisses, vorsieht, erforderlich, oder
     \label{itm:09-2i}
 
     \item die Verarbeitung ist auf der Grundlage des Unionsrechts oder des Rechts eines Mitgliedstaats, das in
      angemessenem Verhältnis zu dem verfolgten Ziel steht, den Wesensgehalt des Rechts auf Datenschutz wahrt und
-     angemessene und spezifische Maßnahmen zur Wahrung der Grundrechte und Interessen der betroffenen Person vorsieht,
+     angemessene und spezifische Maßnahmen zur Wahrung der Grundrechte und Interessen der \hyperref[itm:04-1]{betroffenen Person} vorsieht,
      für im öffentlichen Interesse liegende Archivzwecke, für wissenschaftliche oder historische Forschungszwecke oder
      für statistische Zwecke gemäß \hyperref[itm:89-1]{Artikel 89 Absatz 1} erforderlich.
     \label{itm:09-2j}
