--- a/artikel/10.tex
+++ b/artikel/10.tex
@@ -7,7 +7,7 @@
 Die Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten} über strafrechtliche Verurteilungen und Straftaten oder damit zusammenhängende
 Sicherungsmaßregeln aufgrund von \hyperref[itm:06-1]{Artikel 6 Absatz 1} darf nur unter behördlicher Aufsicht
 vorgenommen werden oder wenn dies nach dem Unionsrecht oder dem Recht der Mitgliedstaaten, das geeignete Garantien für
-die Rechte und Freiheiten der betroffenen Personen vorsieht, zulässig ist. Ein umfassendes Register der
+die Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Personen} vorsieht, zulässig ist. Ein umfassendes Register der
 strafrechtlichen Verurteilungen darf nur unter behördlicher Aufsicht geführt werden.
 
 \addsec{Eigene Notizen}
