--- a/artikel/12.tex
+++ b/artikel/12.tex
@@ -6,34 +6,34 @@
 
 \begin{enumerate}
 
-  \item Der Verantwortliche trifft geeignete Maßnahmen, um der betroffenen Person alle Informationen gemäß den Artikeln
+  \item Der Verantwortliche trifft geeignete Maßnahmen, um der \hyperref[itm:04-1]{betroffenen Person} alle Informationen gemäß den Artikeln
    \hyperref[ch:13]{13} und \hyperref[ch:14]{14} und alle Mitteilungen gemäß den Artikeln \hyperref[ch:15]{15} bis
    \hyperref[ch:22]{22} und \hyperref[ch:34]{Artikel 34}, die sich auf die Verarbeitung beziehen, in präziser,
     transparenter, verständlicher und leicht zugänglicher Form in einer klaren und einfachen Sprache zu übermitteln;
     dies gilt insbesondere für Informationen, die sich speziell an Kinder richten. Die Übermittlung der Informationen
-    erfolgt schriftlich oder in anderer Form, gegebenenfalls auch elektronisch. Falls von der betroffenen Person
-    verlangt, kann die Information mündlich erteilt werden, sofern die Identität der betroffenen Person in anderer Form
+    erfolgt schriftlich oder in anderer Form, gegebenenfalls auch elektronisch. Falls von der \hyperref[itm:04-1]{betroffenen Person}
+    verlangt, kann die Information mündlich erteilt werden, sofern die Identität der \hyperref[itm:04-1]{betroffenen Person} in anderer Form
     nachgewiesen wurde.
   \label{itm:12-1}
 
-  \item Der Verantwortliche erleichtert der betroffenen Person die Ausübung ihrer Rechte gemäß den Artikeln \hyperref
+  \item Der Verantwortliche erleichtert der \hyperref[itm:04-1]{betroffenen Person} die Ausübung ihrer Rechte gemäß den Artikeln \hyperref
    [ch:15]{15} bis \hyperref[ch:22]{22}. In den in \hyperref[itm:11-2]{Artikel 11 Absatz 2} genannten Fällen darf sich
-   der Verantwortliche nur dann weigern, aufgrund des Antrags der betroffenen Person auf Wahrnehmung ihrer Rechte gemäß
+   der Verantwortliche nur dann weigern, aufgrund des Antrags der \hyperref[itm:04-1]{betroffenen Person} auf Wahrnehmung ihrer Rechte gemäß
    den Artikeln \hyperref[ch:15]{15} bis \hyperref[ch:22]{22} tätig zu werden, wenn er glaubhaft macht, dass er nicht
-   in der Lage ist, die betroffene Person zu identifizieren.
+   in der Lage ist, die \hyperref[itm:04-1]{betroffene Person} zu identifizieren.
   \label{itm:12-2}
 
-  \item Der Verantwortliche stellt der betroffenen Person Informationen über die auf Antrag gemäß den Artikeln \hyperref
+  \item Der Verantwortliche stellt der \hyperref[itm:04-1]{betroffenen Person} Informationen über die auf Antrag gemäß den Artikeln \hyperref
    [ch:15]{15} bis \hyperref[ch:22]{22} ergriffenen Maßnahmen unverzüglich, in jedem Fall aber innerhalb eines Monats
    nach Eingang des Antrags zur Verfügung. Diese Frist kann um weitere zwei Monate verlängert werden, wenn dies unter
    Berücksichtigung der Komplexität und der Anzahl von Anträgen erforderlich ist. Der Verantwortliche unterrichtet die
-   betroffene Person innerhalb eines Monats nach Eingang des Antrags über eine Fristverlängerung, zusammen mit den
-   Gründen für die Verzögerung. Stellt die betroffene Person den Antrag elektronisch, so ist sie nach Möglichkeit auf
+   \hyperref[itm:04-1]{betroffene Person} innerhalb eines Monats nach Eingang des Antrags über eine Fristverlängerung, zusammen mit den
+   Gründen für die Verzögerung. Stellt die \hyperref[itm:04-1]{betroffene Person} den Antrag elektronisch, so ist sie nach Möglichkeit auf
    elektronischem Weg zu unterrichten, sofern sie nichts anderes angibt.
   \label{itm:12-3}
 
-  \item Wird der Verantwortliche auf den Antrag der betroffenen Person hin nicht tätig, so unterrichtet er die
-   betroffene Person ohne Verzögerung, spätestens aber innerhalb eines Monats nach Eingang des Antrags über die Gründe
+  \item Wird der Verantwortliche auf den Antrag der \hyperref[itm:04-1]{betroffenen Person} hin nicht tätig, so unterrichtet er die
+   \hyperref[itm:04-1]{betroffene Person} ohne Verzögerung, spätestens aber innerhalb eines Monats nach Eingang des Antrags über die Gründe
    hierfür und über die Möglichkeit, bei einer Aufsichtsbehörde Beschwerde einzulegen oder einen gerichtlichen
    Rechtsbehelf einzulegen.
   \label{itm:12-4}
@@ -41,7 +41,7 @@
   \item Informationen gemäß den Artikeln \hyperref[ch:13]{13} und \hyperref[ch:14]{14} sowie alle Mitteilungen und
    Maßnahmen gemäß den Artikeln \hyperref[ch:15]{15} bis \hyperref[ch:22]{22} und \hyperref[ch:34]{Artikel 34} werden
    unentgeltlich zur Verfügung gestellt. Bei offenkundig unbegründeten oder -- insbesondere im Fall von häufiger
-   Wiederholung -- exzessiven Anträgen einer betroffenen Person kann der Verantwortliche entweder
+   Wiederholung -- exzessiven Anträgen einer \hyperref[itm:04-1]{betroffenen Person} kann der Verantwortliche entweder
   \label{itm:12-5}
 
   \begin{enumerate}
@@ -60,11 +60,11 @@
 
   \item Hat der Verantwortliche begründete Zweifel an der Identität der natürlichen Person, die den Antrag gemäß den
    Artikeln \hyperref[ch:15]{15} bis \hyperref[ch:21]{21} stellt, so kann er unbeschadet des \hyperref[ch:11]
-   {Artikels 11} zusätzliche Informationen anfordern, die zur Bestätigung der Identität der betroffenen Person
+   {Artikels 11} zusätzliche Informationen anfordern, die zur Bestätigung der Identität der \hyperref[itm:04-1]{betroffenen Person}
    erforderlich sind.
   \label{itm:12-6}
 
-  \item Die Informationen, die den betroffenen Personen gemäß den Artikeln \hyperref[ch:13]{13} und \hyperref[ch:14]
+  \item Die Informationen, die den \hyperref[itm:04-1]{betroffenen Personen} gemäß den Artikeln \hyperref[ch:13]{13} und \hyperref[ch:14]
    {14} bereitzustellen sind, können in Kombination mit standardisierten Bildsymbolen bereitgestellt werden, um in
    leicht wahrnehmbarer, verständlicher und klar nachvollziehbarer Form einen aussagekräftigen Überblick über die
    beabsichtigte Verarbeitung zu vermitteln. Werden die Bildsymbole in elektronischer Form dargestellt, müssen sie
