--- a/artikel/16.tex
+++ b/artikel/16.tex
@@ -4,8 +4,8 @@
 
 \addsec{Text der Verordnung}
 
-Die betroffene Person hat das Recht, von dem Verantwortlichen unverzüglich die Berichtigung sie betreffender unrichtiger
-\hyperref[itm:04-1]{personenbezogener Daten} zu verlangen. Unter Berücksichtigung der Zwecke der Verarbeitung hat die betroffene Person das
+Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, von dem Verantwortlichen unverzüglich die Berichtigung sie betreffender unrichtiger
+\hyperref[itm:04-1]{personenbezogener Daten} zu verlangen. Unter Berücksichtigung der Zwecke der Verarbeitung hat die \hyperref[itm:04-1]{betroffene Person} das
 Recht, die Vervollständigung unvollständiger \hyperref[itm:04-1]{personenbezogener Daten} -- auch mittels einer ergänzenden Erklärung -- zu
 verlangen.
 
