--- a/artikel/17.tex
+++ b/artikel/17.tex
@@ -6,7 +6,7 @@
 
 \begin{enumerate}
 
-  \item Die betroffene Person hat das Recht, von dem Verantwortlichen zu verlangen, dass sie betreffende
+  \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, von dem Verantwortlichen zu verlangen, dass sie betreffende
    \hyperref[itm:04-1]{personenbezogene Daten} unverzüglich gelöscht werden, und der Verantwortliche ist verpflichtet, personenbezogene
    Daten unverzüglich zu löschen, sofern einer der folgenden Gründe zutrifft:
   \label{itm:17-1}
@@ -17,13 +17,13 @@
      wurden, nicht mehr notwendig.
     \label{itm:17-1a}
 
-    \item Die betroffene Person widerruft ihre Einwilligung, auf die sich die Verarbeitung gemäß \hyperref[itm:06-1a]
+    \item Die \hyperref[itm:04-1]{betroffene Person} widerruft ihre Einwilligung, auf die sich die Verarbeitung gemäß \hyperref[itm:06-1a]
      {Artikel 6 Absatz 1 Buchstabe a} oder \hyperref[itm:09-2a]{Artikel 9 Absatz 2 Buchstabe a} stützte, und es fehlt
      an einer anderweitigen Rechtsgrundlage für die Verarbeitung.
     \label{itm:17-1b}
 
-    \item Die betroffene Person legt gemäß \hyperref[itm:21-1]{Artikel 21 Absatz 1} Widerspruch gegen die Verarbeitung
-     ein und es liegen keine vorrangigen berechtigten Gründe für die Verarbeitung vor, oder die betroffene Person legt
+    \item Die \hyperref[itm:04-1]{betroffene Person} legt gemäß \hyperref[itm:21-1]{Artikel 21 Absatz 1} Widerspruch gegen die Verarbeitung
+     ein und es liegen keine vorrangigen berechtigten Gründe für die Verarbeitung vor, oder die \hyperref[itm:04-1]{betroffene Person} legt
      gemäß \hyperref[itm:21-2]{Artikel 21 Absatz 2} Widerspruch gegen die Verarbeitung ein.
     \label{itm:17-1c}
 
@@ -43,7 +43,7 @@
   \item Hat der Verantwortliche die \hyperref[itm:04-1]{personenbezogenen Daten} öffentlich gemacht und ist er gemäß \hyperref[itm:17-1]
    {Absatz 1} zu deren Löschung verpflichtet, so trifft er unter Berücksichtigung der verfügbaren Technologie und der
    Implementierungskosten angemessene Maßnahmen, auch technischer Art, um für die Datenverarbeitung Verantwortliche,
-   die die \hyperref[itm:04-1]{personenbezogenen Daten} verarbeiten, darüber zu informieren, dass eine betroffene Person von ihnen die
+   die die \hyperref[itm:04-1]{personenbezogenen Daten} verarbeiten, darüber zu informieren, dass eine \hyperref[itm:04-1]{betroffene Person} von ihnen die
    Löschung aller Links zu diesen \hyperref[itm:04-1]{personenbezogenen Daten} oder von Kopien oder Replikationen dieser personenbezogenen
    Daten verlangt hat.
   \label{itm:17-2}
