--- a/artikel/23.tex
+++ b/artikel/23.tex
@@ -48,7 +48,7 @@
      {g} genannten Zwecke verbunden sind;
     \label{itm:23-1h}
 
-    \item den Schutz der betroffenen Person oder der Rechte und Freiheiten anderer Personen;
+    \item den Schutz der \hyperref[itm:04-1]{betroffenen Person} oder der Rechte und Freiheiten anderer Personen;
     \label{itm:23-1i}
 
     \item die Durchsetzung zivilrechtlicher Ansprüche.
@@ -81,10 +81,10 @@
      Zwecken der Verarbeitung oder der Verarbeitungskategorien,
     \label{itm:23-2f}
 
-    \item die Risiken für die Rechte und Freiheiten der betroffenen Personen und
+    \item die Risiken für die Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Personen} und
     \label{itm:23-2g}
 
-    \item das Recht der betroffenen Personen auf Unterrichtung über die Beschränkung, sofern dies nicht dem Zweck der
+    \item das Recht der \hyperref[itm:04-1]{betroffenen Personen} auf Unterrichtung über die Beschränkung, sofern dies nicht dem Zweck der
      Beschränkung abträglich ist.
     \label{itm:23-2h}
 
