--- a/artikel/27.tex
+++ b/artikel/27.tex
@@ -27,13 +27,13 @@
 
   \end{enumerate}
 
-  \item Der Vertreter muss in einem der Mitgliedstaaten niedergelassen sein, in denen die betroffenen Personen, deren
+  \item Der Vertreter muss in einem der Mitgliedstaaten niedergelassen sein, in denen die \hyperref[itm:04-1]{betroffenen Personen}, deren
    \hyperref[itm:04-1]{personenbezogene Daten} im Zusammenhang mit den ihnen angebotenen Waren oder Dienstleistungen verarbeitet werden oder
    deren Verhalten beobachtet wird, sich befinden.
   \label{itm:27-3}
 
   \item Der Vertreter wird durch den Verantwortlichen oder den Auftragsverarbeiter beauftragt, zusätzlich zu diesem oder
-   an seiner Stelle insbesondere für Aufsichtsbehörden und betroffene Personen bei sämtlichen Fragen im Zusammenhang
+   an seiner Stelle insbesondere für Aufsichtsbehörden und \hyperref[itm:04-1]{betroffene Personen} bei sämtlichen Fragen im Zusammenhang
    mit der Verarbeitung zur Gewährleistung der Einhaltung dieser Verordnung als Anlaufstelle zu dienen.
   \label{itm:27-4}
 
