--- a/artikel/28.tex
+++ b/artikel/28.tex
@@ -9,7 +9,7 @@
   \item Erfolgt eine Verarbeitung im Auftrag eines Verantwortlichen, so arbeitet dieser nur mit Auftragsverarbeitern,
    die hinreichend Garantien dafür bieten, dass geeignete technische und organisatorische Maßnahmen so durchgeführt
    werden, dass die Verarbeitung im Einklang mit den Anforderungen dieser Verordnung erfolgt und den Schutz der Rechte
-   der betroffenen Person gewährleistet.
+   der \hyperref[itm:04-1]{betroffenen Person} gewährleistet.
   \label{itm:28-1}
 
   \item Der Auftragsverarbeiter nimmt keinen weiteren Auftragsverarbeiter ohne vorherige gesonderte oder allgemeine
@@ -22,7 +22,7 @@
   \item Die Verarbeitung durch einen Auftragsverarbeiter erfolgt auf der Grundlage eines Vertrags oder eines anderen
    Rechtsinstruments nach dem Unionsrecht oder dem Recht der Mitgliedstaaten, der bzw. das den Auftragsverarbeiter in
    Bezug auf den Verantwortlichen bindet und in dem Gegenstand und Dauer der Verarbeitung, Art und Zweck der
-   Verarbeitung, die Art der \hyperref[itm:04-1]{personenbezogenen Daten}, die Kategorien betroffener Personen und die Pflichten und Rechte
+   Verarbeitung, die Art der \hyperref[itm:04-1]{personenbezogenen Daten}, die Kategorien \hyperref[itm:04-1]{betroffener Personen} und die Pflichten und Rechte
    des Verantwortlichen festgelegt sind. Dieser Vertrag bzw. dieses andere Rechtsinstrument sieht insbesondere vor,
    dass der Auftragsverarbeiter
   \label{itm:28-3-1}
@@ -50,7 +50,7 @@
 
     \item angesichts der Art der Verarbeitung den Verantwortlichen nach Möglichkeit mit geeigneten technischen und
      organisatorischen Maßnahmen dabei unterstützt, seiner Pflicht zur Beantwortung von Anträgen auf Wahrnehmung der in
-     \hyperref[part:3]{Kapitel III} genannten Rechte der betroffenen Person nachzukommen;
+     \hyperref[part:3]{Kapitel III} genannten Rechte der \hyperref[itm:04-1]{betroffenen Person} nachzukommen;
     \label{itm:28-3-1e}
 
     \item unter Berücksichtigung der Art der Verarbeitung und der ihm zur Verfügung stehenden Informationen den
