--- a/artikel/33.tex
+++ b/artikel/33.tex
@@ -23,7 +23,7 @@
   \begin{enumerate}
   
     \item eine Beschreibung der Art der Verletzung des Schutzes \hyperref[itm:04-1]{personenbezogener Daten}, soweit möglich mit Angabe der
-     Kategorien und der ungefähren Zahl der betroffenen Personen, der betroffenen Kategorien und der ungefähren Zahl
+     Kategorien und der ungefähren Zahl der \hyperref[itm:04-1]{betroffenen Personen}, der betroffenen Kategorien und der ungefähren Zahl
      der betroffenen \hyperref[itm:04-1]{personenbezogenen Daten}sätze;
     \label{itm:33-3a}
 
