--- a/artikel/34.tex
+++ b/artikel/34.tex
@@ -7,17 +7,17 @@
 \begin{enumerate}
 
   \item Hat die Verletzung des Schutzes \hyperref[itm:04-1]{personenbezogener Daten} voraussichtlich ein hohes Risiko für die persönlichen
-   Rechte und Freiheiten natürlicher Personen zur Folge, so benachrichtigt der Verantwortliche die betroffene Person
+   Rechte und Freiheiten natürlicher Personen zur Folge, so benachrichtigt der Verantwortliche die \hyperref[itm:04-1]{betroffene Person}
    unverzüglich von der Verletzung.
   \label{itm:34-1}
 
-  \item Die in \hyperref[itm:34-1]{Absatz 1} genannte Benachrichtigung der betroffenen Person beschreibt in klarer und
+  \item Die in \hyperref[itm:34-1]{Absatz 1} genannte Benachrichtigung der \hyperref[itm:04-1]{betroffenen Person} beschreibt in klarer und
    einfacher Sprache die Art der Verletzung des Schutzes \hyperref[itm:04-1]{personenbezogener Daten} und enthält zumindest die in
    \hyperref[itm:33-3]{Artikel 33 Absatz 3} Buchstaben \hyperref[itm:33-3b]{b}, \hyperref[itm:33-3c]{c} und \hyperref
     [itm:33-3d]{d} genannten Informationen und Maßnahmen.
   \label{itm:34-2}
 
-  \item Die Benachrichtigung der betroffenen Person gemäß \hyperref[itm:34-1]{Absatz 1} ist nicht erforderlich, wenn eine der folgenden
+  \item Die Benachrichtigung der \hyperref[itm:04-1]{betroffenen Person} gemäß \hyperref[itm:34-1]{Absatz 1} ist nicht erforderlich, wenn eine der folgenden
    Bedingungen erfüllt ist:
   \label{itm:34-3}
 
@@ -30,18 +30,18 @@
     \label{itm:34-3a}
 
     \item der Verantwortliche durch nachfolgende Maßnahmen sichergestellt hat, dass das hohe Risiko für die Rechte und
-     Freiheiten der betroffenen Personen gemäß \hyperref[itm:34-1]{Absatz 1} aller Wahrscheinlichkeit nach nicht mehr
+     Freiheiten der \hyperref[itm:04-1]{betroffenen Personen} gemäß \hyperref[itm:34-1]{Absatz 1} aller Wahrscheinlichkeit nach nicht mehr
      besteht;
     \label{itm:34-3b}
 
     \item dies mit einem unverhältnismäßigen Aufwand verbunden wäre. In diesem Fall hat stattdessen eine öffentliche
-     Bekanntmachung oder eine ähnliche Maßnahme zu erfolgen, durch die die betroffenen Personen vergleichbar wirksam
+     Bekanntmachung oder eine ähnliche Maßnahme zu erfolgen, durch die die \hyperref[itm:04-1]{betroffenen Personen} vergleichbar wirksam
      informiert werden.
     \label{itm:34-3c}
 
   \end{enumerate}
 
-  \item Wenn der Verantwortliche die betroffene Person nicht bereits über die Verletzung des Schutzes personenbezogener
+  \item Wenn der Verantwortliche die \hyperref[itm:04-1]{betroffene Person} nicht bereits über die Verletzung des Schutzes personenbezogener
    Daten benachrichtigt hat, kann die Aufsichtsbehörde unter Berücksichtigung der Wahrscheinlichkeit, mit der die
    Verletzung des Schutzes \hyperref[itm:04-1]{personenbezogener Daten} zu einem hohen Risiko führt, von dem Verantwortlichen verlangen,
    dies nachzuholen, oder sie kann mit einem Beschluss feststellen, dass bestimmte der in \hyperref[itm:34-3]{Absatz 3}
