--- a/artikel/36.tex
+++ b/artikel/36.tex
@@ -37,7 +37,7 @@
     \item die Zwecke und die Mittel der beabsichtigten Verarbeitung;
     \label{itm:36-3b}
 
-    \item die zum Schutz der Rechte und Freiheiten der betroffenen Personen gemäß dieser Verordnung vorgesehenen
+    \item die zum Schutz der Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Personen} gemäß dieser Verordnung vorgesehenen
      Maßnahmen und Garantien;
     \label{itm:36-3c}
 
