--- a/artikel/37.tex
+++ b/artikel/37.tex
@@ -17,7 +17,7 @@
 
     \item die Kerntätigkeit des Verantwortlichen oder des Auftragsverarbeiters in der Durchführung von
      Verarbeitungsvorgängen besteht, welche aufgrund ihrer Art, ihres Umfangs und/oder ihrer Zwecke eine umfangreiche
-     regelmäßige und systematische Überwachung von betroffenen Personen erforderlich machen, oder
+     regelmäßige und systematische Überwachung von \hyperref[itm:04-1]{betroffenen Personen} erforderlich machen, oder
     \label{itm:37-1b}
 
     \item die Kerntätigkeit des Verantwortlichen oder des Auftragsverarbeiters in der umfangreichen Verarbeitung
