--- a/artikel/38.tex
+++ b/artikel/38.tex
@@ -23,7 +23,7 @@
    Managementebene des Verantwortlichen oder des Auftragsverarbeiters.
   \label{itm:38-3}
 
-  \item Betroffene Personen können den Datenschutzbeauftragten zu allen mit der Verarbeitung ihrer personenbezogenen
+  \item \hyperref[itm:04-1]{Betroffene Personen} können den Datenschutzbeauftragten zu allen mit der Verarbeitung ihrer personenbezogenen
    Daten und mit der Wahrnehmung ihrer Rechte gemäß dieser Verordnung im Zusammenhang stehenden Fragen zu Rate ziehen.
   \label{itm:38-4}
 
