--- a/artikel/40.tex
+++ b/artikel/40.tex
@@ -31,10 +31,10 @@
     \item Pseudonymisierung \hyperref[itm:04-1]{personenbezogener Daten};
     \label{itm:40-2d}
 
-    \item Unterrichtung der Öffentlichkeit und der betroffenen Personen;
+    \item Unterrichtung der Öffentlichkeit und der \hyperref[itm:04-1]{betroffenen Personen};
     \label{itm:40-2e}
 
-    \item Ausübung der Rechte betroffener Personen;
+    \item Ausübung der Rechte \hyperref[itm:04-1]{betroffener Personen};
     \label{itm:40-2f}
 
     \item Unterrichtung und Schutz von Kindern und Art und Weise, in der die Einwilligung des Trägers der elterlichen
@@ -46,15 +46,15 @@
     \label{itm:40-2h}
 
     \item die Meldung von Verletzungen des Schutzes \hyperref[itm:04-1]{personenbezogener Daten} an Aufsichtsbehörden und die
-     Benachrichtigung der betroffenen Person von solchen Verletzungen des Schutzes \hyperref[itm:04-1]{personenbezogener Daten};
+     Benachrichtigung der \hyperref[itm:04-1]{betroffenen Person} von solchen Verletzungen des Schutzes \hyperref[itm:04-1]{personenbezogener Daten};
     \label{itm:40-2i}
 
     \item die Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an Drittländer oder an internationale Organisationen oder
     \label{itm:40-2j}
 
     \item außergerichtliche Verfahren und sonstige Streitbeilegungsverfahren zur Beilegung von Streitigkeiten zwischen
-     Verantwortlichen und betroffenen Personen im Zusammenhang mit der Verarbeitung, unbeschadet der Rechte betroffener
-     Personen gemäß den Artikeln \hyperref[ch:77]{77} und \hyperref[ch:79]{79}.
+     Verantwortlichen und \hyperref[itm:04-1]{betroffenen Personen} im Zusammenhang mit der Verarbeitung, unbeschadet der Rechte \hyperref[itm:04-1]{betroffener
+     Personen} gemäß den Artikeln \hyperref[ch:77]{77} und \hyperref[ch:79]{79}.
     \label{itm:40-2k}
 
   \end{enumerate}
@@ -67,7 +67,7 @@
    oder internationale Organisationen nach Maßgabe des \hyperref[itm:46-2e]{Artikels 46 Absatz 2 Buchstabe e} zu
    bieten. Diese Verantwortlichen oder Auftragsverarbeiter gehen mittels vertraglicher oder sonstiger rechtlich
    bindender Instrumente die verbindliche und durchsetzbare Verpflichtung ein, die geeigneten Garantien anzuwenden,
-   auch im Hinblick auf die Rechte der betroffenen Personen.
+   auch im Hinblick auf die Rechte der \hyperref[itm:04-1]{betroffenen Personen}.
   \label{itm:40-3}
 
   \item Die Verhaltensregeln gemäß \hyperref[itm:40-2]{Absatz 2 des vorliegenden Artikels} müssen Verfahren vorsehen,
