--- a/artikel/41.tex
+++ b/artikel/41.tex
@@ -29,7 +29,7 @@
 
     \item Verfahren und Strukturen festgelegt hat, mit denen sie Beschwerden über Verletzungen der Verhaltensregeln oder
      über die Art und Weise, in der die Verhaltensregeln von dem Verantwortlichen oder dem Auftragsverarbeiter
-     angewendet werden oder wurden, nachgeht und diese Verfahren und Strukturen für betroffene Personen und die
+     angewendet werden oder wurden, nachgeht und diese Verfahren und Strukturen für \hyperref[itm:04-1]{betroffene Personen} und die
      Öffentlichkeit transparent macht, und
     \label{itm:41-2c}
 
