--- a/artikel/42.tex
+++ b/artikel/42.tex
@@ -21,7 +21,7 @@
    Maßgabe von \hyperref[itm:46-2f]{Artikel 46 Absatz 2 Buchstabe f} geeignete Garantien bieten. Diese Verantwortlichen
    oder Auftragsverarbeiter gehen mittels vertraglicher oder sonstiger rechtlich bindender Instrumente die verbindliche
    und durchsetzbare Verpflichtung ein, diese geeigneten Garantien anzuwenden, auch im Hinblick auf die Rechte der
-   betroffenen Personen.
+   \hyperref[itm:04-1]{betroffenen Personen}.
   \label{itm:42-2}
 
   \item Die Zertifizierung muss freiwillig und über ein transparentes Verfahren zugänglich sein.
