--- a/artikel/43.tex
+++ b/artikel/43.tex
@@ -48,7 +48,7 @@
 
     \item Verfahren und Strukturen festgelegt haben, mit denen sie Beschwerden über Verletzungen der Zertifizierung oder
      die Art und Weise, in der die Zertifizierung von dem Verantwortlichen oder dem Auftragsverarbeiter umgesetzt wird
-     oder wurde, nachgehen und diese Verfahren und Strukturen für betroffene Personen und die Öffentlichkeit
+     oder wurde, nachgehen und diese Verfahren und Strukturen für \hyperref[itm:04-1]{betroffene Personen} und die Öffentlichkeit
      transparent machen, und
     \label{itm:43-2d}
 
