--- a/artikel/45.tex
+++ b/artikel/45.tex
@@ -24,15 +24,15 @@
      Strafrecht sowie Zugang der Behörden zu \hyperref[itm:04-1]{personenbezogenen Daten} -- sowie die Anwendung dieser Rechtsvorschriften,
      Datenschutzvorschriften, Berufsregeln und Sicherheitsvorschriften einschließlich der Vorschriften für die
      Weiterübermittlung \hyperref[itm:04-1]{personenbezogener Daten} an ein anderes Drittland bzw. eine andere internationale Organisation,
-     die Rechtsprechung sowie wirksame und durchsetzbare Rechte der betroffenen Person und wirksame
-     verwaltungsrechtliche und gerichtliche Rechtsbehelfe für betroffene Personen, deren \hyperref[itm:04-1]{personenbezogene Daten}
+     die Rechtsprechung sowie wirksame und durchsetzbare Rechte der \hyperref[itm:04-1]{betroffenen Person} und wirksame
+     verwaltungsrechtliche und gerichtliche Rechtsbehelfe für \hyperref[itm:04-1]{betroffene Personen}, deren \hyperref[itm:04-1]{personenbezogene Daten}
      übermittelt werden,
     \label{itm:45-2a}
 
     \item die Existenz und die wirksame Funktionsweise einer oder mehrerer unabhängiger Aufsichtsbehörden in dem
      betreffenden Drittland oder denen eine internationale Organisation untersteht und die für die Einhaltung und
      Durchsetzung der Datenschutzvorschriften, einschließlich angemessener Durchsetzungsbefugnisse, für die
-     Unterstützung und Beratung der betroffenen Personen bei der Ausübung ihrer Rechte und für die Zusammenarbeit mit
+     Unterstützung und Beratung der \hyperref[itm:04-1]{betroffenen Personen} bei der Ausübung ihrer Rechte und für die Zusammenarbeit mit
      den Aufsichtsbehörden der Mitgliedstaaten zuständig sind, und
     \label{itm:45-2b}
 
