--- a/artikel/46.tex
+++ b/artikel/46.tex
@@ -9,7 +9,7 @@
   \item Falls kein Beschluss nach \hyperref[itm:45-3]{Artikel 45 Absatz 3} vorliegt, darf ein Verantwortlicher oder ein
    Auftragsverarbeiter \hyperref[itm:04-1]{personenbezogene Daten} an ein Drittland oder eine internationale Organisation nur übermitteln,
    sofern der Verantwortliche oder der Auftragsverarbeiter geeignete Garantien vorgesehen hat und sofern den
-   betroffenen Personen durchsetzbare Rechte und wirksame Rechtsbehelfe zur Verfügung stehen.
+   \hyperref[itm:04-1]{betroffenen Personen} durchsetzbare Rechte und wirksame Rechtsbehelfe zur Verfügung stehen.
   \label{itm:46-1}
 
   \item Die in \hyperref[itm:46-1]{Absatz 1} genannten geeigneten Garantien können, ohne dass hierzu eine besondere
@@ -34,13 +34,13 @@
 
     \item genehmigten Verhaltensregeln gemäß \hyperref[ch:40]{Artikel 40} zusammen mit rechtsverbindlichen und
      durchsetzbaren Verpflichtungen des Verantwortlichen oder des Auftragsverarbeiters in dem Drittland zur Anwendung
-     der geeigneten Garantien, einschließlich in Bezug auf die Rechte der betroffenen Personen, oder
+     der geeigneten Garantien, einschließlich in Bezug auf die Rechte der \hyperref[itm:04-1]{betroffenen Personen}, oder
     \label{itm:46-2e}
 
     \item einem genehmigten Zertifizierungsmechanismus gemäß \hyperref[ch:42]{Artikel 42} zusammen mit
      rechtsverbindlichen und durchsetzbaren Verpflichtungen des Verantwortlichen oder des Auftragsverarbeiters in dem
-     Drittland zur Anwendung der geeigneten Garantien, einschließlich in Bezug auf die Rechte der betroffenen
-     Personen.
+     Drittland zur Anwendung der geeigneten Garantien, einschließlich in Bezug auf die Rechte der \hyperref[itm:04-1]{betroffenen
+     Personen}.
     \label{itm:46-2f}
 
   \end{enumerate}
@@ -57,7 +57,7 @@
     \label{itm:46-3a}
 
     \item Bestimmungen, die in Verwaltungsvereinbarungen zwischen Behörden oder öffentlichen Stellen aufzunehmen sind
-     und durchsetzbare und wirksame Rechte für die betroffenen Personen einschließen.
+     und durchsetzbare und wirksame Rechte für die \hyperref[itm:04-1]{betroffenen Personen} einschließen.
     \label{itm:46-3b}
 
   \end{enumerate}
