--- a/artikel/47.tex
+++ b/artikel/47.tex
@@ -17,7 +17,7 @@
      werden, und dies auch für ihre Beschäftigten gilt,
     \label{itm:47-1a}
 
-    \item den betroffenen Personen ausdrücklich durchsetzbare Rechte in Bezug auf die Verarbeitung ihrer
+    \item den \hyperref[itm:04-1]{betroffenen Personen} ausdrücklich durchsetzbare Rechte in Bezug auf die Verarbeitung ihrer
      \hyperref[itm:04-1]{personenbezogenen Daten} übertragen und
     \label{itm:47-1b}
 
@@ -37,7 +37,7 @@
     \label{itm:4722a}
 
     \item die betreffenden Datenübermittlungen oder Reihen von Datenübermittlungen einschließlich der betreffenden Arten
-     \hyperref[itm:04-1]{personenbezogener Daten}, Art und Zweck der Datenverarbeitung, Art der betroffenen Personen und das betreffende
+     \hyperref[itm:04-1]{personenbezogener Daten}, Art und Zweck der Datenverarbeitung, Art der \hyperref[itm:04-1]{betroffenen Personen} und das betreffende
      Drittland beziehungsweise die betreffenden Drittländer;
     \label{itm:47-2b}
 
@@ -51,7 +51,7 @@
      diese internen Datenschutzvorschriften gebundene Stellen;
     \label{itm:47-2d}
 
-    \item die Rechte der betroffenen Personen in Bezug auf die Verarbeitung und die diesen offenstehenden Mittel zur
+    \item die Rechte der \hyperref[itm:04-1]{betroffenen Personen} in Bezug auf die Verarbeitung und die diesen offenstehenden Mittel zur
      Wahrnehmung dieser Rechte einschließlich des Rechts, nicht einer ausschließlich auf einer automatisierten
      Verarbeitung -- einschließlich Profiling -- beruhenden Entscheidung nach \hyperref[ch:22]{Artikel 22} unterworfen
      zu werden sowie des in \hyperref[ch:79]{Artikel 79} niedergelegten Rechts auf Beschwerde bei der zuständigen
@@ -67,7 +67,7 @@
      der Umstand, durch den der Schaden eingetreten ist, dem betreffenden Mitglied nicht zur Last gelegt werden kann;
     \label{itm:47-2f}
 
-    \item die Art und Weise, wie die betroffenen Personen über die Bestimmungen der Artikel \hyperref[ch:13]{13} und
+    \item die Art und Weise, wie die \hyperref[itm:04-1]{betroffenen Personen} über die Bestimmungen der Artikel \hyperref[ch:13]{13} und
      \hyperref[ch:14]{14} hinaus über die verbindlichen internen Datenschutzvorschriften und insbesondere über die unter
      den Buchstaben \hyperref[itm:47-2d]{d}, \hyperref[itm:47-2e]{e} und \hyperref[itm:47-2f]{f} dieses Absatzes
      genannten Aspekte informiert werden;
@@ -85,7 +85,7 @@
     \item die innerhalb der Unternehmensgruppe oder Gruppe von Unternehmen, die eine gemeinsame Wirtschaftstätigkeit
      ausüben, bestehenden Verfahren zur Überprüfung der Einhaltung der verbindlichen internen Datenschutzvorschriften.
      Derartige Verfahren beinhalten Datenschutzüberprüfungen und Verfahren zur Gewährleistung von Abhilfemaßnahmen zum
-     Schutz der Rechte der betroffenen Person. Die Ergebnisse derartiger Überprüfungen sollten der in \hyperref
+     Schutz der Rechte der \hyperref[itm:04-1]{betroffenen Person}. Die Ergebnisse derartiger Überprüfungen sollten der in \hyperref
      [itm:47-2h]{Buchstabe h} genannten Person oder Einrichtung sowie dem Verwaltungsrat des herrschenden Unternehmens
      einer Unternehmensgruppe oder der Gruppe von Unternehmen, die eine gemeinsame Wirtschaftstätigkeit ausüben,
      mitgeteilt werden und sollten der zuständigen Aufsichtsbehörde auf Anfrage zur Verfügung gestellt werden;
