--- a/artikel/49.tex
+++ b/artikel/49.tex
@@ -14,16 +14,16 @@
 
   \begin{enumerate}
   
-    \item die betroffene Person hat in die vorgeschlagene Datenübermittlung ausdrücklich eingewilligt, nachdem sie über
+    \item die \hyperref[itm:04-1]{betroffene Person} hat in die vorgeschlagene Datenübermittlung ausdrücklich eingewilligt, nachdem sie über
      die für sie bestehenden möglichen Risiken derartiger Datenübermittlungen ohne Vorliegen eines
      Angemessenheitsbeschlusses und ohne geeignete Garantien unterrichtet wurde,
     \label{itm:49-1-1a}
 
-    \item die Übermittlung ist für die Erfüllung eines Vertrags zwischen der betroffenen Person und dem Verantwortlichen
-     oder zur Durchführung von vorvertraglichen Maßnahmen auf Antrag der betroffenen Person erforderlich,
+    \item die Übermittlung ist für die Erfüllung eines Vertrags zwischen der \hyperref[itm:04-1]{betroffenen Person} und dem Verantwortlichen
+     oder zur Durchführung von vorvertraglichen Maßnahmen auf Antrag der \hyperref[itm:04-1]{betroffenen Person} erforderlich,
     \label{itm:49-1-1b}
 
-    \item die Übermittlung ist zum Abschluss oder zur Erfüllung eines im Interesse der betroffenen Person von dem
+    \item die Übermittlung ist zum Abschluss oder zur Erfüllung eines im Interesse der \hyperref[itm:04-1]{betroffenen Person} von dem
      Verantwortlichen mit einer anderen natürlichen oder juristischen Person geschlossenen Vertrags erforderlich,
     \label{itm:49-1-1c}
 
@@ -33,8 +33,8 @@
     \item die Übermittlung ist zur Geltendmachung, Ausübung oder Verteidigung von Rechtsansprüchen erforderlich,
     \label{itm:49-1-1e}
 
-    \item die Übermittlung ist zum Schutz lebenswichtiger Interessen der betroffenen Person oder anderer Personen
-     erforderlich, sofern die betroffene Person aus physischen oder rechtlichen Gründen außerstande ist, ihre
+    \item die Übermittlung ist zum Schutz lebenswichtiger Interessen der \hyperref[itm:04-1]{betroffenen Person} oder anderer Personen
+     erforderlich, sofern die \hyperref[itm:04-1]{betroffene Person} aus physischen oder rechtlichen Gründen außerstande ist, ihre
      Einwilligung zu geben,
     \label{itm:49-1-1f}
 
@@ -51,13 +51,13 @@
   {46} -- einschließlich der verbindlichen internen Datenschutzvorschriften -- gestützt werden könnte und keine der
   Ausnahmen für einen bestimmten Fall gemäß dem ersten Unterabsatz anwendbar ist, darf eine Übermittlung an ein
   Drittland oder eine internationale Organisation nur dann erfolgen, wenn die Übermittlung nicht wiederholt erfolgt,
-  nur eine begrenzte Zahl von betroffenen Personen betrifft, für die Wahrung der zwingenden berechtigten Interessen des
-  Verantwortlichen erforderlich ist, sofern die Interessen oder die Rechte und Freiheiten der betroffenen Person nicht
+  nur eine begrenzte Zahl von \hyperref[itm:04-1]{betroffenen Personen} betrifft, für die Wahrung der zwingenden berechtigten Interessen des
+  Verantwortlichen erforderlich ist, sofern die Interessen oder die Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Person} nicht
   überwiegen, und der Verantwortliche alle Umstände der Datenübermittlung beurteilt und auf der Grundlage dieser
   Beurteilung geeignete Garantien in Bezug auf den Schutz \hyperref[itm:04-1]{personenbezogener Daten} vorgesehen hat. Der Verantwortliche
-  setzt die Aufsichtsbehörde von der Übermittlung in Kenntnis. Der Verantwortliche unterrichtet die betroffene Person
-  über die Übermittlung und seine zwingenden berechtigten Interessen; dies erfolgt zusätzlich zu den der betroffenen
-  Person nach den Artikeln \hyperref[ch:13]{13} und \hyperref[ch:14]{14} mitgeteilten Informationen.
+  setzt die Aufsichtsbehörde von der Übermittlung in Kenntnis. Der Verantwortliche unterrichtet die \hyperref[itm:04-1]{betroffene Person}
+  über die Übermittlung und seine zwingenden berechtigten Interessen; dies erfolgt zusätzlich zu den der \hyperref[itm:04-1]{betroffenen
+  Person} nach den Artikeln \hyperref[ch:13]{13} und \hyperref[ch:14]{14} mitgeteilten Informationen.
   \label{itm:49-1-2}
 
   \item Datenübermittlungen gemäß \hyperref[itm:49-1-1g]{Absatz 1 Unterabsatz 1 Buchstabe g} dürfen nicht die Gesamtheit
