--- a/artikel/56.tex
+++ b/artikel/56.tex
@@ -14,7 +14,7 @@
 
   \item Abweichend von \hyperref[itm:56-1]{Absatz 1} ist jede Aufsichtsbehörde dafür zuständig, sich mit einer bei ihr
    eingereichten Beschwerde oder einem etwaigen Verstoß gegen diese Verordnung zu befassen, wenn der Gegenstand nur mit
-   einer Niederlassung in ihrem Mitgliedstaat zusammenhängt oder betroffene Personen nur ihres Mitgliedstaats erheblich
+   einer Niederlassung in ihrem Mitgliedstaat zusammenhängt oder \hyperref[itm:04-1]{betroffene Personen} nur ihres Mitgliedstaats erheblich
    beeinträchtigt.
   \label{itm:56-2}
 
