--- a/artikel/57.tex
+++ b/artikel/57.tex
@@ -27,12 +27,12 @@
      sensibilisieren;
     \label{itm:57-1d}
 
-    \item auf Anfrage jeder betroffenen Person Informationen über die Ausübung ihrer Rechte aufgrund dieser Verordnung
+    \item auf Anfrage jeder \hyperref[itm:04-1]{betroffenen Person} Informationen über die Ausübung ihrer Rechte aufgrund dieser Verordnung
      zur Verfügung stellen und gegebenenfalls zu diesem Zweck mit den Aufsichtsbehörden in anderen Mitgliedstaaten
      zusammenarbeiten;
     \label{itm:57-1e}
 
-    \item sich mit Beschwerden einer betroffenen Person oder Beschwerden einer Stelle, einer Organisation oder eines
+    \item sich mit Beschwerden einer \hyperref[itm:04-1]{betroffenen Person} oder Beschwerden einer Stelle, einer Organisation oder eines
      Verbandes gemäß \hyperref[ch:80]{Artikel 80} befassen, den Gegenstand der Beschwerde in angemessenem Umfang
      untersuchen und den Beschwerdeführer innerhalb einer angemessenen Frist über den Fortgang und das Ergebnis der
      Untersuchung unterrichten, insbesondere, wenn eine weitere Untersuchung oder Koordinierung mit einer anderen
@@ -108,7 +108,7 @@
    werden kann, ohne dass andere Kommunikationsmittel ausgeschlossen werden.
   \label{itm:57-2}
 
-  \item Die Erfüllung der Aufgaben jeder Aufsichtsbehörde ist für die betroffene Person und gegebenenfalls für den
+  \item Die Erfüllung der Aufgaben jeder Aufsichtsbehörde ist für die \hyperref[itm:04-1]{betroffene Person} und gegebenenfalls für den
    Datenschutzbeauftragten unentgeltlich.
   \label{itm:57-3}
 
