--- a/artikel/58.tex
+++ b/artikel/58.tex
@@ -50,7 +50,7 @@
      diese Verordnung verstoßen hat,
     \label{itm:58-2b}
 
-    \item den Verantwortlichen oder den Auftragsverarbeiter anzuweisen, den Anträgen der betroffenen Person auf Ausübung
+    \item den Verantwortlichen oder den Auftragsverarbeiter anzuweisen, den Anträgen der \hyperref[itm:04-1]{betroffenen Person} auf Ausübung
      der ihr nach dieser Verordnung zustehenden Rechte zu entsprechen,
     \label{itm:58-2c}
 
@@ -58,8 +58,8 @@
      bestimmte Weise und innerhalb eines bestimmten Zeitraums in Einklang mit dieser Verordnung zu bringen,
     \label{itm:58-2d}
 
-    \item den Verantwortlichen anzuweisen, die von einer Verletzung des Schutzes \hyperref[itm:04-1]{personenbezogener Daten} betroffenen
-     Person entsprechend zu benachrichtigen,
+    \item den Verantwortlichen anzuweisen, die von einer Verletzung des Schutzes \hyperref[itm:04-1]{personenbezogener Daten} \hyperref[itm:04-1]{betroffenen
+     Person} entsprechend zu benachrichtigen,
     \label{itm:58-2e}
 
     \item eine vorübergehende oder endgültige Beschränkung der Verarbeitung, einschließlich eines Verbots, zu
