--- a/artikel/60.tex
+++ b/artikel/60.tex
@@ -73,7 +73,7 @@
   \label{itm:60-10}
 
   \item Hat -- in Ausnahmefällen -- eine betroffene Aufsichtsbehörde Grund zu der Annahme, dass zum Schutz der
-   Interessen betroffener Personen dringender Handlungsbedarf besteht, so kommt das Dringlichkeitsverfahren nach
+   Interessen \hyperref[itm:04-1]{betroffener Personen} dringender Handlungsbedarf besteht, so kommt das Dringlichkeitsverfahren nach
    \hyperref[ch:66]{Artikel 66} zur Anwendung.
   \label{itm:60-11}
 
