--- a/artikel/62.tex
+++ b/artikel/62.tex
@@ -12,7 +12,7 @@
   \label{itm:62-1}
 
   \item Verfügt der Verantwortliche oder der Auftragsverarbeiter über Niederlassungen in mehreren Mitgliedstaaten oder
-   werden die Verarbeitungsvorgänge voraussichtlich auf eine bedeutende Zahl betroffener Personen in mehr als einem
+   werden die Verarbeitungsvorgänge voraussichtlich auf eine bedeutende Zahl \hyperref[itm:04-1]{betroffener Personen} in mehr als einem
    Mitgliedstaat erhebliche Auswirkungen haben, ist die Aufsichtsbehörde jedes dieser Mitgliedstaaten berechtigt, an
    den gemeinsamen Maßnahmen teilzunehmen. Die gemäß \hyperref[itm:56-1]{Artikel 56 Absatz 1} oder \hyperref[itm:56-4]
    {Absatz 4} zuständige Aufsichtsbehörde lädt die Aufsichtsbehörde jedes dieser Mitgliedstaaten zur Teilnahme an den
