--- a/artikel/66.tex
+++ b/artikel/66.tex
@@ -10,7 +10,7 @@
    Artikel \hyperref[ch:63]{63}, \hyperref[ch:64]{64} und \hyperref[ch:65]{65} oder dem Verfahren nach \hyperref[ch:60]
    {Artikel 60} sofort einstweilige Maßnahmen mit festgelegter Geltungsdauer von höchstens drei Monaten treffen, die in
    ihrem Hoheitsgebiet rechtliche Wirkung entfalten sollen, wenn sie zu der Auffassung gelangt, dass dringender
-   Handlungsbedarf besteht, um Rechte und Freiheiten von betroffenen Personen zu schützen. Die Aufsichtsbehörde setzt
+   Handlungsbedarf besteht, um Rechte und Freiheiten von \hyperref[itm:04-1]{betroffenen Personen} zu schützen. Die Aufsichtsbehörde setzt
    die anderen betroffenen Aufsichtsbehörden, den Ausschuss und die Kommission unverzüglich von diesen Maßnahmen und
    den Gründen für deren Erlass in Kenntnis.
   \label{itm:66-1}
@@ -23,7 +23,7 @@
   \item Jede Aufsichtsbehörde kann unter Angabe von Gründen, auch für den dringenden Handlungsbedarf, im
    Dringlichkeitsverfahren um eine Stellungnahme oder gegebenenfalls einen verbindlichen Beschluss des Ausschusses
    ersuchen, wenn eine zuständige Aufsichtsbehörde trotz dringenden Handlungsbedarfs keine geeignete Maßnahme getroffen
-   hat, um die Rechte und Freiheiten von betroffenen Personen zu schützen.
+   hat, um die Rechte und Freiheiten von \hyperref[itm:04-1]{betroffenen Personen} zu schützen.
   \label{itm:66-3}
 
   \item Abweichend von \hyperref[itm:64-3]{Artikel 64 Absatz 3} und \hyperref[itm:65-2]{Artikel 65 Absatz 2} wird eine
