--- a/artikel/79.tex
+++ b/artikel/79.tex
@@ -6,7 +6,7 @@
 
 \begin{enumerate}
 
-  \item Jede betroffene Person hat unbeschadet eines verfügbaren verwaltungsrechtlichen oder außergerichtlichen
+  \item Jede \hyperref[itm:04-1]{betroffene Person} hat unbeschadet eines verfügbaren verwaltungsrechtlichen oder außergerichtlichen
    Rechtsbehelfs einschließlich des Rechts auf Beschwerde bei einer Aufsichtsbehörde gemäß \hyperref[ch:77]{Artikel 77}
    das Recht auf einen wirksamen gerichtlichen Rechtsbehelf, wenn sie der Ansicht ist, dass die ihr aufgrund dieser
    Verordnung zustehenden Rechte infolge einer nicht im Einklang mit dieser Verordnung stehenden Verarbeitung ihrer
@@ -15,7 +15,7 @@
 
   \item Für Klagen gegen einen Verantwortlichen oder gegen einen Auftragsverarbeiter sind die Gerichte des
    Mitgliedstaats zuständig, in dem der Verantwortliche oder der Auftragsverarbeiter eine Niederlassung hat. Wahlweise
-   können solche Klagen auch bei den Gerichten des Mitgliedstaats erhoben werden, in dem die betroffene Person ihren
+   können solche Klagen auch bei den Gerichten des Mitgliedstaats erhoben werden, in dem die \hyperref[itm:04-1]{betroffene Person} ihren
    Aufenthaltsort hat, es sei denn, es handelt sich bei dem Verantwortlichen oder dem Auftragsverarbeiter um eine
    Behörde eines Mitgliedstaats, die in Ausübung ihrer hoheitlichen Befugnisse tätig geworden ist.
   \label{itm:79-2}
