--- a/artikel/82.tex
+++ b/artikel/82.tex
@@ -26,7 +26,7 @@
    auch ein Auftragsverarbeiter an derselben Verarbeitung beteiligt und sind sie gemäß den Absätzen \hyperref[itm:82-2]
    {2} und \hyperref[itm:82-3]{3} für einen durch die Verarbeitung verursachten Schaden verantwortlich, so haftet jeder
    Verantwortliche oder jeder Auftragsverarbeiter für den gesamten Schaden, damit ein wirksamer Schadensersatz für die
-   betroffene Person sichergestellt ist.
+   \hyperref[itm:04-1]{betroffene Person} sichergestellt ist.
   \label{itm:82-4}
 
   \item Hat ein Verantwortlicher oder Auftragsverarbeiter gemäß \hyperref[itm:82-4]{Absatz 4} vollständigen
