--- a/artikel/83.tex
+++ b/artikel/83.tex
@@ -20,7 +20,7 @@
   \begin{enumerate}
   
     \item Art, Schwere und Dauer des Verstoßes unter Berücksichtigung der Art, des Umfangs oder des Zwecks der
-     betreffenden Verarbeitung sowie der Zahl der von der Verarbeitung betroffenen Personen und des Ausmaßes des von
+     betreffenden Verarbeitung sowie der Zahl der von der Verarbeitung \hyperref[itm:04-1]{betroffenen Personen} und des Ausmaßes des von
      ihnen erlittenen Schadens;
     \label{itm:83-2a}
 
@@ -28,7 +28,7 @@
     \label{itm:83-2b}
 
     \item jegliche von dem Verantwortlichen oder dem Auftragsverarbeiter getroffenen Maßnahmen zur Minderung des den
-     betroffenen Personen entstandenen Schadens;
+     \hyperref[itm:04-1]{betroffenen Personen} entstandenen Schadens;
     \label{itm:83-2c}
 
     \item Grad der Verantwortung des Verantwortlichen oder des Auftragsverarbeiters unter Berücksichtigung der von ihnen
@@ -100,7 +100,7 @@
      \hyperref[ch:5]{5}, \hyperref[ch:6]{6}, \hyperref[ch:7]{7} und \hyperref[ch:9]{9};
     \label{itm:83-5a}
 
-    \item die Rechte der betroffenen Person gemäß den Artikeln \hyperref[ch:12]{12} bis \hyperref[ch:22]{22};
+    \item die Rechte der \hyperref[itm:04-1]{betroffenen Person} gemäß den Artikeln \hyperref[ch:12]{12} bis \hyperref[ch:22]{22};
     \label{itm:83-5b}
 
     \item die Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an einen Empfänger in einem Drittland oder an eine internationale
