--- a/artikel/85.tex
+++ b/artikel/85.tex
@@ -13,7 +13,7 @@
 
   \item Für die Verarbeitung, die zu journalistischen Zwecken oder zu wissenschaftlichen, künstlerischen oder
    literarischen Zwecken erfolgt, sehen die Mitgliedstaaten Abweichungen oder Ausnahmen von \hyperref[part:2]
-   {Kapitel II} (Grundsätze), \hyperref[part:3]{Kapitel III} (Rechte der betroffenen Person), \hyperref[part:4]
+   {Kapitel II} (Grundsätze), \hyperref[part:3]{Kapitel III} (Rechte der \hyperref[itm:04-1]{betroffenen Person}), \hyperref[part:4]
    {Kapitel IV}(Verantwortlicher und Auftragsverarbeiter), \hyperref[part:5]{Kapitel V} (Übermittlung personenbezogener
    Daten an Drittländer oder an internationale Organisationen), \hyperref[part:6]{Kapitel VI}
    (Unabhängige Aufsichtsbehörden), \hyperref[part:7]{Kapitel VII}(Zusammenarbeit und Kohärenz) und \hyperref[part:9]
