--- a/artikel/89.tex
+++ b/artikel/89.tex
@@ -9,11 +9,11 @@
 
   \item Die Verarbeitung zu im öffentlichen Interesse liegenden Archivzwecken, zu wissenschaftlichen oder historischen
    Forschungszwecken oder zu statistischen Zwecken unterliegt geeigneten Garantien für die Rechte und Freiheiten der
-   betroffenen Person gemäß dieser Verordnung. Mit diesen Garantien wird sichergestellt, dass technische und
+   \hyperref[itm:04-1]{betroffenen Person} gemäß dieser Verordnung. Mit diesen Garantien wird sichergestellt, dass technische und
    organisatorische Maßnahmen bestehen, mit denen insbesondere die Achtung des Grundsatzes der Datenminimierung
    gewährleistet wird. Zu diesen Maßnahmen kann die Pseudonymisierung gehören, sofern es möglich ist, diese Zwecke auf
    diese Weise zu erfüllen. In allen Fällen, in denen diese Zwecke durch die Weiterverarbeitung, bei der die
-   Identifizierung von betroffenen Personen nicht oder nicht mehr möglich ist, erfüllt werden können, werden diese
+   Identifizierung von \hyperref[itm:04-1]{betroffenen Personen} nicht oder nicht mehr möglich ist, erfüllt werden können, werden diese
    Zwecke auf diese Weise erfüllt.
   \label{itm:89-1}
 
