--- a/artikel/13.tex
+++ b/artikel/13.tex
@@ -6,8 +6,8 @@
 
 \begin{enumerate}
 
-  \item Werden \hyperref[itm:04-1]{personenbezogene Daten} bei der betroffenen Person erhoben, so teilt der Verantwortliche der betroffenen
-   Person zum Zeitpunkt der Erhebung dieser Daten Folgendes mit:
+  \item Werden \hyperref[itm:04-1]{personenbezogene Daten} bei der \hyperref[itm:04-1]{betroffenen Person} erhoben, so teilt der Verantwortliche der \hyperref[itm:04-1]{betroffenen
+   Person} zum Zeitpunkt der Erhebung dieser Daten Folgendes mit:
   \label{itm:13-1}
 
   \begin{enumerate}
@@ -39,8 +39,8 @@
 
   \end{enumerate}
 
-  \item Zusätzlich zu den Informationen gemäß \hyperref[itm:13-1]{Absatz 1} stellt der Verantwortliche der betroffenen
-   Person zum Zeitpunkt der Erhebung dieser Daten folgende weitere Informationen zur Verfügung, die notwendig sind, um
+  \item Zusätzlich zu den Informationen gemäß \hyperref[itm:13-1]{Absatz 1} stellt der Verantwortliche der \hyperref[itm:04-1]{betroffenen
+   Person} zum Zeitpunkt der Erhebung dieser Daten folgende weitere Informationen zur Verfügung, die notwendig sind, um
    eine faire und transparente Verarbeitung zu gewährleisten:
   \label{itm:13-2}
 
@@ -64,26 +64,26 @@
     \label{itm:13-2d}
 
     \item ob die Bereitstellung der \hyperref[itm:04-1]{personenbezogenen Daten} gesetzlich oder vertraglich vorgeschrieben oder für einen
-     Vertragsabschluss erforderlich ist, ob die betroffene Person verpflichtet ist, die \hyperref[itm:04-1]{personenbezogenen Daten}
+     Vertragsabschluss erforderlich ist, ob die \hyperref[itm:04-1]{betroffene Person} verpflichtet ist, die \hyperref[itm:04-1]{personenbezogenen Daten}
      bereitzustellen, und welche mögliche Folgen die Nichtbereitstellung hätte und
     \label{itm:13-2e}
 
     \item das Bestehen einer automatisierten Entscheidungsfindung einschließlich Profiling gemäß \hyperref[ch:22]
      {Artikel 22} Absätze \hyperref[itm:22-1]{1} und \hyperref[itm:22-4]{4} und -- zumindest in diesen Fällen --
      aussagekräftige Informationen über die involvierte Logik sowie die Tragweite und die angestrebten Auswirkungen
-     einer derartigen Verarbeitung für die betroffene Person.
+     einer derartigen Verarbeitung für die \hyperref[itm:04-1]{betroffene Person}.
     \label{itm:13-2f}
 
   \end{enumerate}
 
   \item Beabsichtigt der Verantwortliche, die \hyperref[itm:04-1]{personenbezogenen Daten} für einen anderen Zweck weiterzuverarbeiten als
-   den, für den die \hyperref[itm:04-1]{personenbezogenen Daten} erhoben wurden, so stellt er der betroffenen Person vor dieser
+   den, für den die \hyperref[itm:04-1]{personenbezogenen Daten} erhoben wurden, so stellt er der \hyperref[itm:04-1]{betroffenen Person} vor dieser
    Weiterverarbeitung Informationen über diesen anderen Zweck und alle anderen maßgeblichen Informationen gemäß
    \hyperref[itm:13-2]{Absatz 2} zur Verfügung.
   \label{itm:13-3}  
 
   \item Die Absätze \hyperref[itm:13-1]{1}, \hyperref[itm:13-2]{2} und \hyperref[itm:13-3]{3} finden keine Anwendung,
-   wenn und soweit die betroffene Person bereits über die Informationen verfügt.
+   wenn und soweit die \hyperref[itm:04-1]{betroffene Person} bereits über die Informationen verfügt.
   \label{itm:13-4}  
 
 \end{enumerate}
