--- a/artikel/14.tex
+++ b/artikel/14.tex
@@ -6,8 +6,8 @@
 
 \begin{enumerate}
 
-  \item Werden \hyperref[itm:04-1]{personenbezogene Daten} nicht bei der betroffenen Person erhoben, so teilt der Verantwortliche der
-   betroffenen Person Folgendes mit:
+  \item Werden \hyperref[itm:04-1]{personenbezogene Daten} nicht bei der \hyperref[itm:04-1]{betroffenen Person} erhoben, so teilt der Verantwortliche der
+   \hyperref[itm:04-1]{betroffenen Person} Folgendes mit:
   \label{itm:14-1}
 
   \begin{enumerate}
@@ -38,8 +38,8 @@
 
   \end{enumerate}
 
-  \item Zusätzlich zu den Informationen gemäß \hyperref[itm:14-1]{Absatz 1} stellt der Verantwortliche der betroffenen
-   Person die folgenden Informationen zur Verfügung, die erforderlich sind, um der betroffenen Person gegenüber eine
+  \item Zusätzlich zu den Informationen gemäß \hyperref[itm:14-1]{Absatz 1} stellt der Verantwortliche der \hyperref[itm:04-1]{betroffenen
+   Person} die folgenden Informationen zur Verfügung, die erforderlich sind, um der \hyperref[itm:04-1]{betroffenen Person} gegenüber eine
    faire und transparente Verarbeitung zu gewährleisten:
   \label{itm:14-2}
 
@@ -73,7 +73,7 @@
     \item das Bestehen einer automatisierten Entscheidungsfindung einschließlich Profiling gemäß \hyperref[ch:22]
      {Artikel 22} Absätze \hyperref[itm:22-1]{1} und \hyperref[itm:22-4]{4} und -- zumindest in diesen Fällen --
      aussagekräftige Informationen über die involvierte Logik sowie die Tragweite und die angestrebten Auswirkungen
-     einer derartigen Verarbeitung für die betroffene Person.
+     einer derartigen Verarbeitung für die \hyperref[itm:04-1]{betroffene Person}.
     \label{itm:14-2g}
 
   \end{enumerate}
@@ -88,7 +88,7 @@
      angemessenen Frist nach Erlangung der \hyperref[itm:04-1]{personenbezogenen Daten}, längstens jedoch innerhalb eines Monats,
     \label{itm:14-3a}
 
-    \item falls die \hyperref[itm:04-1]{personenbezogenen Daten} zur Kommunikation mit der betroffenen Person verwendet werden sollen,
+    \item falls die \hyperref[itm:04-1]{personenbezogenen Daten} zur Kommunikation mit der \hyperref[itm:04-1]{betroffenen Person} verwendet werden sollen,
      spätestens zum Zeitpunkt der ersten Mitteilung an sie, oder,
     \label{itm:14-3b}
 
@@ -99,7 +99,7 @@
   \end{enumerate}
 
   \item Beabsichtigt der Verantwortliche, die \hyperref[itm:04-1]{personenbezogenen Daten} für einen anderen Zweck weiterzuverarbeiten als
-   den, für den die \hyperref[itm:04-1]{personenbezogenen Daten} erlangt wurden, so stellt er der betroffenen Person vor dieser
+   den, für den die \hyperref[itm:04-1]{personenbezogenen Daten} erlangt wurden, so stellt er der \hyperref[itm:04-1]{betroffenen Person} vor dieser
    Weiterverarbeitung Informationen über diesen anderen Zweck und alle anderen maßgeblichen Informationen gemäß
    \hyperref[itm:14-2]{Absatz 2} zur Verfügung.
   \label{itm:14-4}
@@ -109,7 +109,7 @@
 
   \begin{enumerate}
   
-    \item die betroffene Person bereits über die Informationen verfügt,
+    \item die \hyperref[itm:04-1]{betroffene Person} bereits über die Informationen verfügt,
     \label{itm:14-5a}
 
     \item die Erteilung dieser Informationen sich als unmöglich erweist oder einen unverhältnismäßigen Aufwand erfordern
@@ -118,13 +118,13 @@
      \hyperref[itm:89-1]{Artikel 89 Absatz 1} genannten Bedingungen und Garantien oder soweit die in \hyperref[itm:14-1]
       {Absatz 1 des vorliegenden Artikels} genannte Pflicht voraussichtlich die Verwirklichung der Ziele dieser
       Verarbeitung unmöglich macht oder ernsthaft beeinträchtigt In diesen Fällen ergreift der Verantwortliche
-      geeignete Maßnahmen zum Schutz der Rechte und Freiheiten sowie der berechtigten Interessen der betroffenen
-      Person, einschließlich der Bereitstellung dieser Informationen für die Öffentlichkeit,
+      geeignete Maßnahmen zum Schutz der Rechte und Freiheiten sowie der berechtigten Interessen der \hyperref[itm:04-1]{betroffenen
+      Person}, einschließlich der Bereitstellung dieser Informationen für die Öffentlichkeit,
     \label{itm:14-5b}
 
     \item die Erlangung oder Offenlegung durch Rechtsvorschriften der Union oder der Mitgliedstaaten, denen der
-     Verantwortliche unterliegt und die geeignete Maßnahmen zum Schutz der berechtigten Interessen der betroffenen
-     Person vorsehen, ausdrücklich geregelt ist oder
+     Verantwortliche unterliegt und die geeignete Maßnahmen zum Schutz der berechtigten Interessen der \hyperref[itm:04-1]{betroffenen
+     Person} vorsehen, ausdrücklich geregelt ist oder
     \label{itm:14-5c}
 
     \item die \hyperref[itm:04-1]{personenbezogenen Daten} gemäß dem Unionsrecht oder dem Recht der Mitgliedstaaten dem Berufsgeheimnis,
