--- a/artikel/15.tex
+++ b/artikel/15.tex
@@ -6,7 +6,7 @@
 
 \begin{enumerate}
 
-  \item Die betroffene Person hat das Recht, von dem Verantwortlichen eine Bestätigung darüber zu verlangen, ob sie
+  \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, von dem Verantwortlichen eine Bestätigung darüber zu verlangen, ob sie
    betreffende \hyperref[itm:04-1]{personenbezogene Daten} verarbeitet werden; ist dies der Fall, so hat sie ein Recht auf Auskunft über
    diese \hyperref[itm:04-1]{personenbezogenen Daten} und auf folgende Informationen:
   \label{itm:15-1}
@@ -35,26 +35,26 @@
     \item das Bestehen eines Beschwerderechts bei einer Aufsichtsbehörde;
     \label{itm:15-1f}
 
-    \item wenn die \hyperref[itm:04-1]{personenbezogenen Daten} nicht bei der betroffenen Person erhoben werden, alle verfügbaren
+    \item wenn die \hyperref[itm:04-1]{personenbezogenen Daten} nicht bei der \hyperref[itm:04-1]{betroffenen Person} erhoben werden, alle verfügbaren
      Informationen über die Herkunft der Daten;
     \label{itm:15-1g}
 
     \item das Bestehen einer automatisierten Entscheidungsfindung einschließlich Profiling gemäß \hyperref[ch:22]
      {Artikel 22} Absätze \hyperref[itm:22-1]{1} und \hyperref[itm:22-4]{4} und -- zumindest in diesen Fällen --
      aussagekräftige Informationen über die involvierte Logik sowie die Tragweite und die angestrebten Auswirkungen
-     einer derartigen Verarbeitung für die betroffene Person.
+     einer derartigen Verarbeitung für die \hyperref[itm:04-1]{betroffene Person}.
     \label{itm:15-1h}
 
   \end{enumerate}
 
   \item Werden \hyperref[itm:04-1]{personenbezogene Daten} an ein Drittland oder an eine internationale Organisation übermittelt, so hat die
-   betroffene Person das Recht, über die geeigneten Garantien gemäß \hyperref[ch:46]{Artikel 46} im Zusammenhang mit der
+   \hyperref[itm:04-1]{betroffene Person} das Recht, über die geeigneten Garantien gemäß \hyperref[ch:46]{Artikel 46} im Zusammenhang mit der
    Übermittlung unterrichtet zu werden.
   \label{itm:15-2}
 
   \item Der Verantwortliche stellt eine Kopie der \hyperref[itm:04-1]{personenbezogenen Daten}, die Gegenstand der Verarbeitung sind, zur
-   Verfügung. Für alle weiteren Kopien, die die betroffene Person beantragt, kann der Verantwortliche ein angemessenes
-   Entgelt auf der Grundlage der Verwaltungskosten verlangen. Stellt die betroffene Person den Antrag elektronisch, so
+   Verfügung. Für alle weiteren Kopien, die die \hyperref[itm:04-1]{betroffene Person} beantragt, kann der Verantwortliche ein angemessenes
+   Entgelt auf der Grundlage der Verwaltungskosten verlangen. Stellt die \hyperref[itm:04-1]{betroffene Person} den Antrag elektronisch, so
    sind die Informationen in einem gängigen elektronischen Format zur Verfügung zu stellen, sofern sie nichts anderes
    angibt.
   \label{itm:15-3}
