--- a/artikel/21.tex
+++ b/artikel/21.tex
@@ -6,35 +6,35 @@
 
 \begin{enumerate}
 
-  \item Die betroffene Person hat das Recht, aus Gründen, die sich aus ihrer besonderen Situation ergeben, jederzeit
+  \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, aus Gründen, die sich aus ihrer besonderen Situation ergeben, jederzeit
    gegen die Verarbeitung sie betreffender \hyperref[itm:04-1]{personenbezogener Daten}, die aufgrund von \hyperref[itm:06-1]{Artikel 6
    Absatz 1} Buchstaben \hyperref[itm:06-1e]{e} oder \hyperref[itm:06-1f]{f} erfolgt, Widerspruch einzulegen; dies gilt
    auch für ein auf diese Bestimmungen gestütztes Profiling. Der Verantwortliche verarbeitet die personenbezogenen
    Daten nicht mehr, es sei denn, er kann zwingende schutzwürdige Gründe für die Verarbeitung nachweisen, die die
-   Interessen, Rechte und Freiheiten der betroffenen Person überwiegen, oder die Verarbeitung dient der Geltendmachung,
+   Interessen, Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Person} überwiegen, oder die Verarbeitung dient der Geltendmachung,
    Ausübung oder Verteidigung von Rechtsansprüchen.
   \label{itm:21-1}
 
-  \item Werden \hyperref[itm:04-1]{personenbezogene Daten} verarbeitet, um Direktwerbung zu betreiben, so hat die betroffene Person das
+  \item Werden \hyperref[itm:04-1]{personenbezogene Daten} verarbeitet, um Direktwerbung zu betreiben, so hat die \hyperref[itm:04-1]{betroffene Person} das
    Recht, jederzeit Widerspruch gegen die Verarbeitung sie betreffender \hyperref[itm:04-1]{personenbezogener Daten} zum Zwecke derartiger
    Werbung einzulegen; dies gilt auch für das Profiling, soweit es mit solcher Direktwerbung in Verbindung steht.
   \label{itm:21-2}
 
-  \item Widerspricht die betroffene Person der Verarbeitung für Zwecke der Direktwerbung, so werden die
+  \item Widerspricht die \hyperref[itm:04-1]{betroffene Person} der Verarbeitung für Zwecke der Direktwerbung, so werden die
    \hyperref[itm:04-1]{personenbezogenen Daten} nicht mehr für diese Zwecke verarbeitet.
   \label{itm:21-3}
 
-  \item Die betroffene Person muss spätestens zum Zeitpunkt der ersten Kommunikation mit ihr ausdrücklich auf das in den
+  \item Die \hyperref[itm:04-1]{betroffene Person} muss spätestens zum Zeitpunkt der ersten Kommunikation mit ihr ausdrücklich auf das in den
    Absätzen \hyperref[itm:21-1]{1} und \hyperref[itm:21-2]{2} genannte Recht hingewiesen werden; dieser Hinweis hat in
    einer verständlichen und von anderen Informationen getrennten Form zu erfolgen.
   \label{itm:21-4}
 
-  \item Im Zusammenhang mit der Nutzung von Diensten der Informationsgesellschaft kann die betroffene Person ungeachtet
+  \item Im Zusammenhang mit der Nutzung von Diensten der Informationsgesellschaft kann die \hyperref[itm:04-1]{betroffene Person} ungeachtet
    der Richtlinie 2002/58/EG ihr Widerspruchsrecht mittels automatisierter Verfahren ausüben, bei denen technische
    Spezifikationen verwendet werden.
   \label{itm:21-5}
 
-  \item Die betroffene Person hat das Recht, aus Gründen, die sich aus ihrer besonderen Situation ergeben, gegen die sie
+  \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, aus Gründen, die sich aus ihrer besonderen Situation ergeben, gegen die sie
    betreffende Verarbeitung sie betreffender \hyperref[itm:04-1]{personenbezogener Daten}, die zu wissenschaftlichen oder historischen
    Forschungszwecken oder zu statistischen Zwecken gemäß \hyperref[itm:89-1]{Artikel 89 Absatz 1} erfolgt, Widerspruch
    einzulegen, es sei denn, die Verarbeitung ist zur Erfüllung einer im öffentlichen Interesse liegenden Aufgabe
