--- a/artikel/25.tex
+++ b/artikel/25.tex
@@ -12,8 +12,8 @@
    sowohl zum Zeitpunkt der Festlegung der Mittel für die Verarbeitung als auch zum Zeitpunkt der eigentlichen
    Verarbeitung geeignete technische und organisatorische Maßnahmen -- wie z. B. Pseudonymisierung -- trifft, die dafür
    ausgelegt sind, die Datenschutzgrundsätze wie etwa Datenminimierung wirksam umzusetzen und die notwendigen Garantien
-   in die Verarbeitung aufzunehmen, um den Anforderungen dieser Verordnung zu genügen und die Rechte der betroffenen
-   Personen zu schützen.
+   in die Verarbeitung aufzunehmen, um den Anforderungen dieser Verordnung zu genügen und die Rechte der \hyperref[itm:04-1]{betroffenen
+   Personen} zu schützen.
   \label{itm:25-1}
 
   \item Der Verantwortliche trifft geeignete technische und organisatorische Maßnahmen, die sicherstellen, dass durch
