--- a/artikel/30.tex
+++ b/artikel/30.tex
@@ -19,7 +19,7 @@
     \item die Zwecke der Verarbeitung;
     \label{itm:30-1b}
 
-    \item eine Beschreibung der Kategorien betroffener Personen und der Kategorien \hyperref[itm:04-1]{personenbezogener Daten};
+    \item eine Beschreibung der Kategorien \hyperref[itm:04-1]{betroffener Personen} und der Kategorien \hyperref[itm:04-1]{personenbezogener Daten};
     \label{itm:30-1c}
 
     \item die Kategorien von Empfängern, gegenüber denen die \hyperref[itm:04-1]{personenbezogenen Daten} offengelegt worden sind oder noch
@@ -77,7 +77,7 @@
 
   \item Die in den Absätzen \hyperref[itm:30-1]{1} und \hyperref[itm:30-2]{2} genannten Pflichten gelten nicht für
    Unternehmen oder Einrichtungen, die weniger als 250 Mitarbeiter beschäftigen, sofern die von ihnen vorgenommene
-   Verarbeitung nicht ein Risiko für die Rechte und Freiheiten der betroffenen Personen birgt, die Verarbeitung nicht
+   Verarbeitung nicht ein Risiko für die Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Personen} birgt, die Verarbeitung nicht
    nur gelegentlich erfolgt oder nicht die Verarbeitung besonderer Datenkategorien gemäß \hyperref[itm:09-1]{Artikel 9
    Absatz 1} bzw. die  Verarbeitung von \hyperref[itm:04-1]{personenbezogenen Daten} über strafrechtliche Verurteilungen und Straftaten im
    Sinne des \hyperref[ch:10]{Artikels 10} einschließt.
