--- a/artikel/35.tex
+++ b/artikel/35.tex
@@ -50,7 +50,7 @@
 
   \item Vor Festlegung der in den Absätzen \hyperref[itm:35-4]{4} und \hyperref[itm:35-5]{5} genannten Listen wendet die
    zuständige Aufsichtsbehörde das Kohärenzverfahren gemäß \hyperref[ch:63]{Artikel 63} an, wenn solche Listen
-   Verarbeitungstätigkeiten umfassen, die mit dem Angebot von Waren oder Dienstleistungen für betroffene Personen oder
+   Verarbeitungstätigkeiten umfassen, die mit dem Angebot von Waren oder Dienstleistungen für \hyperref[itm:04-1]{betroffene Personen} oder
    der Beobachtung des Verhaltens dieser Personen in mehreren Mitgliedstaaten im Zusammenhang stehen oder die den
    freien Verkehr \hyperref[itm:04-1]{personenbezogener Daten} innerhalb der Union erheblich beeinträchtigen könnten.
   \label{itm:35-6}
@@ -67,13 +67,13 @@
     \item eine Bewertung der Notwendigkeit und Verhältnismäßigkeit der Verarbeitungsvorgänge in Bezug auf den Zweck;
     \label{itm:35-7b}
 
-    \item eine Bewertung der Risiken für die Rechte und Freiheiten der betroffenen Personen gemäß \hyperref[itm:35-1]
+    \item eine Bewertung der Risiken für die Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Personen} gemäß \hyperref[itm:35-1]
      {Absatz 1} und
     \label{itm:35-7c}
 
     \item die zur Bewältigung der Risiken geplanten Abhilfemaßnahmen, einschließlich Garantien, Sicherheitsvorkehrungen
      und Verfahren, durch die der Schutz \hyperref[itm:04-1]{personenbezogener Daten} sichergestellt und der Nachweis dafür erbracht wird,
-     dass diese Verordnung eingehalten wird, wobei den Rechten und berechtigten Interessen der betroffenen Personen und
+     dass diese Verordnung eingehalten wird, wobei den Rechten und berechtigten Interessen der \hyperref[itm:04-1]{betroffenen Personen} und
      sonstiger Betroffener Rechnung getragen wird.
     \label{itm:35-7d}
 
@@ -85,7 +85,7 @@
    berücksichtigen.
   \label{itm:35-8}
 
-  \item Der Verantwortliche holt gegebenenfalls den Standpunkt der betroffenen Personen oder ihrer Vertreter zu der
+  \item Der Verantwortliche holt gegebenenfalls den Standpunkt der \hyperref[itm:04-1]{betroffenen Personen} oder ihrer Vertreter zu der
    beabsichtigten Verarbeitung unbeschadet des Schutzes gewerblicher oder öffentlicher Interessen oder der Sicherheit
    der Verarbeitungsvorgänge ein.
   \label{itm:35-9}
