--- a/artikel/65.tex
+++ b/artikel/65.tex
@@ -59,7 +59,7 @@
    Artikels genannten Beschlusses unverzüglich und spätestens einen Monat, nachdem der Europäische Datenschutzausschuss
    seinen Beschluss mitgeteilt hat. Die federführende Aufsichtsbehörde oder gegebenenfalls die Aufsichtsbehörde, bei
    der die Beschwerde eingereicht wurde, setzt den Ausschuss von dem Zeitpunkt, zu dem ihr endgültiger Beschluss dem
-   Verantwortlichen oder dem Auftragsverarbeiter bzw. der betroffenen Person mitgeteilt wird, in Kenntnis. Der
+   Verantwortlichen oder dem Auftragsverarbeiter bzw. der \hyperref[itm:04-1]{betroffenen Person} mitgeteilt wird, in Kenntnis. Der
    endgültige Beschluss der betroffenen Aufsichtsbehörden wird gemäß \hyperref[ch:60]{Artikel 60} Absätze \hyperref
    [itm:60-7]{7}, \hyperref[itm:60-8]{8} und \hyperref[itm:60-9]{9} angenommen. Im endgültigen Beschluss wird auf den
    in \hyperref[itm:65-1]{Absatz 1} genannten Beschluss verwiesen und festgelegt, dass der in \hyperref[itm:65-1]
