--- a/artikel/70.tex
+++ b/artikel/70.tex
@@ -58,7 +58,7 @@
      vorliegenden Absatzes} zur näheren Bestimmung der in \hyperref[ch:47]{Artikel 47} aufgeführten Kriterien und
      Anforderungen für die Übermittlungen \hyperref[itm:04-1]{personenbezogener Daten}, die auf verbindlichen internen
      Datenschutzvorschriften von Verantwortlichen oder Auftragsverarbeitern beruhen, und der dort aufgeführten weiteren
-     erforderlichen Anforderungen zum Schutz \hyperref[itm:04-1]{personenbezogener Daten} der betroffenen Personen;
+     erforderlichen Anforderungen zum Schutz \hyperref[itm:04-1]{personenbezogener Daten} der \hyperref[itm:04-1]{betroffenen Personen};
     \label{itm:70-1i}
 
     \item Bereitstellung von Leitlinien, Empfehlungen und bewährten Verfahren gemäß \hyperref[itm:70-1e]{Buchstabe e des
