--- a/artikel/77.tex
+++ b/artikel/77.tex
@@ -6,9 +6,9 @@
 
 \begin{enumerate}
 
-  \item Jede betroffene Person hat unbeschadet eines anderweitigen verwaltungsrechtlichen oder gerichtlichen
+  \item Jede \hyperref[itm:04-1]{betroffene Person} hat unbeschadet eines anderweitigen verwaltungsrechtlichen oder gerichtlichen
    Rechtsbehelfs das Recht auf Beschwerde bei einer Aufsichtsbehörde, insbesondere in dem Mitgliedstaat ihres
-   Aufenthaltsorts, ihres Arbeitsplatzes oder des Orts des mutmaßlichen Verstoßes, wenn die betroffene Person der
+   Aufenthaltsorts, ihres Arbeitsplatzes oder des Orts des mutmaßlichen Verstoßes, wenn die \hyperref[itm:04-1]{betroffene Person} der
    Ansicht ist, dass die Verarbeitung der sie betreffenden \hyperref[itm:04-1]{personenbezogenen Daten} gegen diese Verordnung verstößt.
   \label{itm:77-1}
 
