--- a/artikel/78.tex
+++ b/artikel/78.tex
@@ -11,10 +11,10 @@
    betreffenden rechtsverbindlichen Beschluss einer Aufsichtsbehörde.
   \label{itm:78-1}
 
-  \item Jede betroffene Person hat unbeschadet eines anderweitigen verwaltungsrechtlichen oder außergerichtlichen
+  \item Jede \hyperref[itm:04-1]{betroffene Person} hat unbeschadet eines anderweitigen verwaltungsrechtlichen oder außergerichtlichen
    Rechtbehelfs das Recht auf einen wirksamen gerichtlichen Rechtsbehelf, wenn die nach den Artikeln \hyperref[ch:55]
    {55} und \hyperref[ch:56]{56} zuständige Aufsichtsbehörde sich nicht mit einer Beschwerde befasst oder die
-   betroffene Person nicht innerhalb von drei Monaten über den Stand oder das Ergebnis der gemäß \hyperref[ch:77]
+   \hyperref[itm:04-1]{betroffene Person} nicht innerhalb von drei Monaten über den Stand oder das Ergebnis der gemäß \hyperref[ch:77]
    {Artikel 77} erhobenen Beschwerde in Kenntnis gesetzt hat.
   \label{itm:78-2}
 
