--- a/artikel/87.tex
+++ b/artikel/87.tex
@@ -7,7 +7,7 @@
 Die Mitgliedstaaten können näher bestimmen, unter welchen spezifischen Bedingungen eine nationale Kennziffer oder andere
 Kennzeichen von allgemeiner Bedeutung Gegenstand einer Verarbeitung sein dürfen. In diesem Fall darf die nationale
 Kennziffer oder das andere Kennzeichen von allgemeiner Bedeutung nur unter Wahrung geeigneter Garantien für die Rechte
-und Freiheiten der betroffenen Person gemäß dieser Verordnung verwendet werden.
+und Freiheiten der \hyperref[itm:04-1]{betroffenen Person} gemäß dieser Verordnung verwendet werden.
 
 \addsec{Eigene Notizen}
 
